--- a/ok/rm/rm03-0.6.0.0.0.md
+++ b/ok/rm/rm03-0.6.0.0.0.md
@@ -1,18 +1,18 @@
 ## 3.6、精
 
-### 1、位置：
+### 1、位置
 
 全身及脏腑都有，以五脏为主。其中肾比较特殊，是精的大仓库。其它脏腑精不足需要肾精补充，精足可以传输到肾藏起来。
 
 > **是故五脏主藏精者也**，不可伤，伤则失守而阴虚；阴虚则无气，无气则死矣。
 >
-> 《黄帝内经灵枢-本神》
+> ——《黄帝内经•灵枢•本神》
 
 > “肾者，主水，**受五脏六腑之精而藏之**，故五脏盛，乃能泻。”
 >
-> 《素问•上古天真论》
+> ——《素问•上古天真论》
 
-### 2、分类：
+### 2、分类
 
 精分为先天之精和后天之精。通常情况下，我们说精的时候，指的是两者皆包括。如需特殊说明，需要明确指出是先天之精还是后天之精。
 
@@ -24,7 +24,7 @@
 >
 > 《黄帝内经讲解-藏象学说-五脏功能与形体组织、四时阴阳的关系》
 
-#### 2.1、后天之精：
+#### 2.1、后天之精
 
 “所谓五脏者，藏精气而不泻也，故满而不能实。六腑者，传化物而不藏，故实而不能满也。”
 
@@ -38,15 +38,15 @@
 >
 > 《黄帝内经讲解-五脏六腑皆禀气于胃》
 
-##### 2.1.1、来源：
+##### 2.1.1、来源
 
 来源于脾胃运化的水谷之精微，脾胃对食物进行消化吸收后而获得，胃主消化，脾主吸收。
 
-##### 2.1.2、使用：
+##### 2.1.2、使用
 
 脾将精传输到五脏六腑，化为脏腑之精气，维持各脏腑功能活动，多余的收藏于肾
 
-##### 2.1.3、判断标准：
+##### 2.1.3、判断标准
 
 饮食是否正常、大便是否正常
 
@@ -60,11 +60,11 @@
 
 #### 2.2、先天之精
 
-##### 2.2.1、来源：
+##### 2.2.1、来源
 
 与生俱来,父母给予
 
-##### 2.2.2、作用：
+##### 2.2.2、作用
 
 帮助后天之精的产生
 
@@ -80,27 +80,27 @@
 
 
 
-#### 2.3、肾精：
+#### 2.3、肾精
 
-##### 2.3.1、来源：
+##### 2.3.1、来源
 
 先天之精加后天之精
 
-##### 2.3.2、功能：
+##### 2.3.2、功能
 
-1、产生元气：
+1、产生元气
 
 肾精化气供给各个脏腑以及全身使用。肾精不足，转化的元气不够，也可以导致脏腑、全身的阳气不足。
 
-2、濡养各个脏腑：
+2、濡养各个脏腑
 
 肾精不足，则可能导致各个脏腑、全身的阴不足。
 
-3、生殖：
+3、生殖
 
 肾精足则男子溢精、女子来潮。不足则男女不能生子。
 
-4、人体的生长发育：
+4、人体的生长发育
 
 人长身体、长头发、长牙齿。肾精减少，头发枯，牙齿落，形体衰。
 
@@ -130,17 +130,15 @@
 
 `牙齿是观察髓的充盈状态的一个指标，因为齿为骨之余，而骨由髓来营养。所以，牙齿洁白坚固代表骨质好、髓充盈。如果牙齿黄黑、松动，在排除牙龈炎、吸烟等问题后，可以代表髓的不足。`
 
-`肾精的几大作用中，应特别注意生殖功能与生髓功能的关系。在肾精产生的量有限的前提下，如果有人长期纵欲，过度使用精的生殖功能，则会造成肾精数量减少，生髓能力下降。导致骨髓、脑髓的不足，使人的健康水平快速下降。这应该是《素问-上古天真论》中提到的“以欲竭其精，以耗散其真，不知持满...故半百而衰也”的道理。`
+`肾精的几大作用中，应特别注意生殖功能与生髓功能的关系。在肾精产生的量有限的前提下，如果有人长期纵欲，过度使用精的生殖功能，则会造成肾精数量减少，生髓能力下降。导致骨髓、脑髓的不足，使人的健康水平快速下降。这应该是《素问•上古天真论》中提到的“以欲竭其精，以耗散其真，不知持满...故半百而衰也”的道理。`
 
 > 冬时肾水当令，阳气内敛，肾气闭藏，故五脏真气亦**下藏于肾，化精生髓，充养骨骼**。
 >
 > 《黄帝内经讲解-气血精神-真气的生成和输布》
->
 
 > 《灵枢●经脉》云：“人始生，先成精，**精成而脑髓生**，骨为干，脉为营，筋为刚，肉为墙，皮肤坚而毛髮长”
 >
 > 《中医药学概论-绪论-对生命认识的唯物观》
->
 
 > “脑户，督脉穴，在枕骨上，通于脑中，**脑为髓海**，乃元阳精气之所聚，针入脑则真气泄，故立死”。
 >
@@ -151,24 +149,20 @@
 > “脑之为言在也，人精在脑
 >
 > 《中医药学概论-奇恒之腑-脑》
->
 
 > 肢体筋脉弛缓，痿弱无力，失于自行活动及行走为主证。。	
 >
 > 久病体虚，或房劳过度，损伤肝肾致精血亏虚，精亏不能**滋髓养骨**，血虚不能荣筋养脉而致痿软无力。...肾主身之骨髓。...肾气热则腰脊不举，**骨枯而髓减发为骨痿**。
 >
-> 《中医内科学- 痿证》
->
+> 《中医内科学-痿证》
 
 > 髓为肾精所化生，**藏于骨腔及脊柱中，脊髓上通于脑**，为髓汇聚之处，所以《灵枢•海论》称脑为髓之海。如果肾精亏虚，髓海不足，就会出现头旋耳鸣，腿酸眩晕，视物不清，周身懈怠无力、常欲安卧等症。
 >
 > 《黄帝内经讲解-藏象学说-（二十一）脉、髓、筋、血、气与目、脑、节、心、肺的所属关系》
->
 
 > 是以圣人陈阴阳，筋脉和同，**骨髓坚固**，气血皆从。如是则内外调和，邪不能害，耳目聪明，气立如故。
 >
-> 《素问•生气通天论》
->
+> ——《素问•生气通天论》
 
 ##### 2.3.3、不同年龄的变化
 
@@ -196,7 +190,7 @@
 
 
 
-##### 2.3.4、判断多少：
+##### 2.3.4、判断多少
 
 男子溢精，女子月经来潮
 
@@ -212,9 +206,9 @@
 
 
 
-> **岐伯曰：使道隧以长，基墙高以方，通凋营卫，三部三里起，骨高肉满，百岁乃得终（2）。**
+> **岐伯曰：使道隧以长，基墙高以方，通凋营卫，三部三里起，骨高肉满，百岁乃得终。**
 >
-> 《灵枢·天年》....
+> ——《灵枢•天年》....
 >
 > “三部三里”，指面部的上中下三部，分别以额角、鼻头、下颌为标志。“起”，有高起不平陷之意。....
 >
@@ -255,7 +249,7 @@
 
 > 肾藏精，是说肾对人体之精气具有封藏的作用
 >
-> 《素问·上古天真论》说：“肾……**受五脏六腑之精而藏之**”。
+> 《素问•上古天真论》说：“肾……**受五脏六腑之精而藏之**”。
 >
 > 由于肾精需五脏精气的濡养，方可充盛，若五脏功能失调，日久必累及肾，使肾中精气匮乏，而致肾的阴阳失调，故有“久病伤肾”的说法。
 >
@@ -285,7 +279,7 @@
 
 
 
-> 《素问·五藏别论》说：“所谓五脏者，藏精气而不泻也，故满而不能实。。。。。这段话是说：五脏的主要功能是藏精气。。。。。
+> 《素问•五藏别论》说：“所谓五脏者，藏精气而不泻也，故满而不能实……这段话是说：五脏的主要功能是藏精气……。
 >
 > 《中医药学概论-五脏六腑》
 
@@ -293,7 +287,7 @@
 
 > ***夫精者，身之本也。故藏于精者，春不病温。***
 >
-> 《素问•金匮真言论》
+> ——《素问•金匮真言论》
 
 
 
@@ -303,9 +297,9 @@
 
 
 
-> **两神相搏，合而成形，常先身生，是谓精(2)**...
+> **两神相搏，合而成形，常先身生，是谓精**……
 >
-> 对新形体而言，精是在形体尚未形成之前就已存在的物质，是繁衍后代，构成形体的基本物质。...
+> 对新形体而言，精是在形体尚未形成之前就已存在的物质，是繁衍后代，构成形体的基本物质。……
 >
 > **精者，血之精微所成，生气之所依也**。生气者，卫气之根，即命门真火是也，精竭，则生气绝矣。
 >
@@ -316,9 +310,8 @@
 > 马莳注：“面之三里，即三部也，皆已耸起。”《内经》认为，从面部的特征可以判断人的寿夭。骨为肾所主，肾为先天之本；肉为脾所主，脾为后天之本。如果**人中沟深而长，面部肌肉高厚，轮廓方正，面部上、中、下三部耸起而不平陷**，肌肉丰满，骨骼高起者，则提示**先后天精气皆旺盛**，所以人能长寿，活百岁而终其天年。当然，通过望面部特征，测候先后天精气盛衰的方法，判断寿夭有一定的道理，但是不能将面部特征与寿夭的关系绝对化，应结合全身其他方面情况综合考虑。
 >
 > 《黄帝内经讲解-藏象学说-寿夭与先后天的关系》
->
 
 ## 题目
 
-1. 精为人体之宝，既能化阳也能化阴。精足的话，无论身体出现阴虚或者阳虚，精都可以进行补充，则调节能力强，不容易生病，万一生病也容易痊愈。精存在于脏腑之中，以五脏所藏最多。五脏之中，尤其以----脏为大仓库，是藏精之所。
-2. 人衰老的根源是肾精的减少。因为肾之华在发，所以头发的状态可以作为肾精的一个指标。又因为肾有主骨生髓的功能，而齿为骨之余，所以牙齿的状态也可以作为肾精的一个指标。头发润泽、牙齿坚固是肾精充足的表现。《素问·上古天真论》谈到人不同年龄，随着肾精的减少，有不同的衰老表现。比如男子在五八四十岁左右的时候，会出现肾气衰，髮堕----槁的现象。
+1. 精为人体之宝，既能化阳也能化阴。精足的话，无论身体出现阴虚或者阳虚，精都可以进行补充，则调节能力强，不容易生病，万一生病也容易痊愈。精存在于脏腑之中，以五脏所藏最多。五脏之中，尤其以 __ __ 脏为大仓库，是藏精之所。
+2. 人衰老的根源是肾精的减少。因为肾之华在发，所以头发的状态可以作为肾精的一个指标。又因为肾有主骨生髓的功能，而齿为骨之余，所以牙齿的状态也可以作为肾精的一个指标。头发润泽、牙齿坚固是肾精充足的表现。《素问•上古天真论》谈到人不同年龄，随着肾精的减少，有不同的衰老表现。比如男子在五八四十岁左右的时候，会出现肾气衰，髮堕 __ __ 槁的现象。
