--- a/ok/rm/rm03-0.7.0.0.0.md
+++ b/ok/rm/rm03-0.7.0.0.0.md
@@ -1,6 +1,6 @@
-## 3.7神
+## 3.7、神
 
-### 1、简介：
+### 1、简介
 
 教材对神的定义分广义和狭义。
 
@@ -20,7 +20,7 @@
 
 个人理解神应该是人的气、血、津液、形体的管理者。
 
-### 2、生成：
+### 2、生成
 
 人的气血、五脏发育完成，神就自然生成。所谓“神气舍心、魂魄毕具，乃成为人”
 
@@ -28,7 +28,7 @@
 >
 > 《黄帝内经讲解-神的产生及其物质基础》
 
-### 3、功能：
+### 3、功能
 
 魂魄在教材中没有详细谈，比如对于魄，只提到是人的本能活动与低级反应，但是具体什么本能活动、哪些低级反应？并没有详细交代。所以这里参考了一些道家经典《云笈七签》、《抱朴子》的内容
 
@@ -42,7 +42,7 @@
 
 神对形体的健康有重要作用，能作用于五脏的功能活动，保证脏腑安和，增强抗病能力。
 
-#### 3.1、低级管理功能（魄）：
+#### 3.1、低级管理功能（魄）
 
 魄是神的一种，传统上称“七魄”
 
@@ -56,9 +56,9 @@
 >
 > 《云笈七签》
 
-#### 3.2、高级管理功能（魂）：
+#### 3.2、高级管理功能（魂）
 
-魂也是神的一种，传统上称“三魂”
+魂也是神的一种，传统上称“三魂”。
 
 关于三魂，《云笈七签》中提到三魂为：第一魂胎光，第二魂爽灵，第三魂幽精。
 
@@ -106,7 +106,7 @@
 
 综上所述，意志，属认识的感性阶段；思虑属认识的理性阶段。意、志、思、虑、智等五个不同的思维形式，反映了认识由现象深入本质，由低级进入高级的全过程。
 
-> 所以任物者谓之心⑴，心有所忆谓之意⑴，意之所存谓之志(3)，因志而存变谓之思(4)，因思而远慕谓之虑(5)，因虑而处物谓之智⑷，...
+> 所以任物者谓之心，心有所忆谓之意，意之所存谓之志，因志而存变谓之思，因思而远慕谓之虑，因虑而处物谓之智，...
 >
 > 心接受来自客观事物的刺激，并加以分析，最终作出反应的功能，是心藏神，主宰精神意识思维活动的具体体现，
 >
@@ -122,7 +122,7 @@
 >
 > 《黄帝内经讲解-神的思维发展过程》
 
-### 4、情志：
+### 4、情志
 
 情，指“七情”，即喜、怒、忧、思、悲、恐、惊。
 
@@ -154,7 +154,7 @@
 >
 > 《中医药学概论-病因病机-情志》
 
-### 5、位置：
+### 5、位置
 
 ​	神在人体中的位置以五脏为主，五脏中又以心为主。
 
@@ -162,10 +162,9 @@
 >
 > 然：脏者，人之神气所舍藏也。故肝藏魂，肺藏魄，心藏神，脾藏意与智，肾藏精与志也。
 >
-> 《难经-三十四难》
->
+> ——《难经•三十四难》
 
-#### 心神：
+#### 心神
 
 心中之神是人所有神的主宰。心神统御其它脏器的精神活动。
 
@@ -223,11 +222,11 @@
 
 心有所忆谓之意:对事物表象的认识。心中产生的忆念活动称为忆
 
-#### 肾志：
+#### 肾志
 
 将忆念保持下来，即对事物表象认识的积累称为志
 
-### 6、神的意义：
+### 6、神的意义
 
 神是身体的管理者，其对人体精、气、血、津液的管理水平决定了人的健康发展趋势，具有非常重要的意义。
 
@@ -241,11 +240,11 @@
 
 > “**精神不进，志意不治，故病不可愈**。今精坏神去，营卫不可复收。何者？**嗜欲无穷，而忧患不止，精气驰坏，营泣卫除，故神去之而病不愈也**。”...
 >
-> “**病为本，工为标**，标本不得，邪气不服”（《素问•汤液醪醴论»)。《明医杂著》也指出：“必须病人受命，坚心定志，绝房室，息妄想，戒恼怒，节饮食，以自培其根，否则虽服良药，亦无他用。”治疗不但要准确辨证，选用适当的治疗手段，而且要健全志意，控制情绪和行为，自我调节精神活动，才能有利于疾病的痊愈。
+> “**病为本，工为标**，标本不得，邪气不服”（《素问•汤液醪醴论》)。《明医杂著》也指出：“必须病人受命，坚心定志，绝房室，息妄想，戒恼怒，节饮食，以自培其根，否则虽服良药，亦无他用。”治疗不但要准确辨证，选用适当的治疗手段，而且要健全志意，控制情绪和行为，自我调节精神活动，才能有利于疾病的痊愈。
 >
 > 《黄帝内经讲解-血气精神的重要作用》
 
-#### 6.1、什么叫神的调节功能：
+#### 6.1、什么叫神的调节功能
 
 举个例子，比如一个房间因为某些原因变冷了。这个时候，管理员要加大暖气的输出。但是暖气出了问题，输出功率不够。这就叫阳虚。
 
@@ -257,25 +256,23 @@
 
 发病要请医生，医生准确分析了是哪个房间出现了什么问题，也就是确定病位、病性，通过汤药、针灸扶正祛邪，让房间恢复平衡。这就是治疗。其实，此时医生起到的是神的作用，即调节气血的分配，使其恢复平衡。
 
-#### 6.2、神与气血的关系：
+#### 6.2、神与气血的关系
 
 气血就像金钱，神是管理金钱的人。精气血足，说明人的家底厚，神足说明人管理气血的能力强。精气血神都足的话，人的能力强。
 
 如果神的关注方向向外的比较多，其消耗气血的速度快，中年之后的健康要注意。如果神关注方向向内，是会保养的人，长寿易得。
 
-### 7、判断神的状态：
+### 7、判断神的状态
 
 中医判断神的状态主要是观察目，其次是语言、思维等等，包括目光精彩、言语清亮、神思不乱、肌肉不削、气息如常、大小便不脱等等。
 
 > *善乎神之义，此死生之本，不可不察也。……以形证言之，则目光精彩，言语清亮，神思不乱，肌肉不削，气息如常，大小便不脱，若此者，虽其脉可疑，尚无足虑，以其形之神在也，”反之则为神去。其中，两目与五色是望神的主要内容。*
 >
 > 《景岳全书•传忠录•神气存亡论》
->
 
 > 两目反应灵敏，顾盼自如，精彩内含，炯炯有光，为有神的表现；两目反应迟钝，目光暗淡，瞳子呆滞，昏不识人，为无神的表现。
 >
 > 《黄帝内经讲解》
->
 
 > 神，一指人的精神，二指脏腑气血盛衰显现于外的各种征象。但无论是精神活动之神，还是脏腑气血征象之神，都是以人体元气为物质基础的，是元气盛衰的反映，所以神的变化对于判断疾病轻重，预后善恶，有着十分重要的意义。《素问•移精变气论》说：“得神者昌，失神者亡”，足见望神的重要性了。
 >
@@ -291,19 +288,19 @@
 >
 > 望神对于癫、狂、癇的病人，则应另当别论。
 >
-> 《中医药学概论 - 诊法- 望神》
+> 《中医药学概论-诊法-望神》
 
-### 8、脑与神的关系：
+### 8、脑与神的关系
 
 现代医学认为人的思维意识是脑的作用。中医也认为脑为元神之府，对精神活动很重要，但中医还认为脑的资源由脏腑提供，因此脏腑功能强健，脑的功能才能正常。每个脏腑对脑的对应功能有支持作用，如果某个脏腑功能衰弱，则对应脑的功能也下降。以肾藏志为例，志代表人的记忆力。肾的功能下降一段时间后，脑对应记忆的功能也会随之下降。其它脏腑也是如此。
 
-### 9、资料：
+### 9、资料
 
 #### 《黄帝内经讲解》
 
-> **天之在我者德也，地之在我者气也，德流气薄而生者也(1)。故生之来谓之精，两精相搏谓之神(2)，随神往来者谓之魂，并精而出入者谓之魄⑴。**
+> **天之在我者德也，地之在我者气也，德流气薄而生者也。故生之来谓之精，两精相搏谓之神，随神往来者谓之魂，并精而出入者谓之魄。**
 >
-> 《灵枢•本神》
+> ——《灵枢•本神》
 >
 > 〔讲解〕
 >
@@ -311,9 +308,13 @@
 >
 > （1）“天”、“地”，合指自然。“我”，泛指一切生物，包括人类。“德”，得也。指大自然恩赐的精微物质，如阳光，雨露等。“气”，指自然界水液，气体等精微物质。德与气都是产生生命活动的物质基础，和人类赖以生存的物质条件，正如成？《？园日札》所说，“若其生物之本源，经言在天为德，在地为气。夫天未尝无气，地亦何尝无德，经分属之，亦互文见义耳。”“流”，下行。“薄”，上迫。天德下流，地气上交，阴阳相错，升降相因，始有生化之机，而产生生命活动。《内经》认为，生命本源于天地之气，生命是由自然界物质经过长期演化而形成的，强调“德”，“气”是先生命而存在的物质，有物质然后有生命，从而从生命的起源与本质等方面，为中医学奠定了唯物主义的基础。
 >
-> （2）“精”，指新生命的起源物质。“两精”，指男女生殖之精。“相搏”，相互搏结，即结合在一起。神在《内经》有以下四种含义：①指自然界物质运动变化及其规律。如《素问•天元纪大论》说：“物生谓之化，物极谓之变。阴阳不测谓之神。”②指人体生命活动及其规律。如《素问•六节脏象论》说：“五味入口，藏于肠胃，味有所藏，以养五气，气和而生，津液相成，神乃自生。”③指人体生命活动的外在表现。《内经》认为神的状态集中地反映着整个机体的健康情况，是诊断疾病、判别预后的重要依据。正如《素问•移精变气论》所说：“得神者昌，失神者亡。”④指人的精神意识思维活动。如《灵枢，本神》说：“心藏脉，脉舍神。”本文中的神，指的是人体生命活动。构成人体的基本物质是精，人的形体与生命活动都起源于精，正如《灵枢•经脉》所说：“人始生，先成精。”所以男女两精相互搏结，所形成的孕育着新生命的原始物质叫做精，所形成的生命活动称为神。
+> （2）“精”，指新生命的起源物质。“两精”，指男女生殖之精。“相搏”，相互搏结，即结合在一起。神在《内经》有以下四种含义：
+> ①指自然界物质运动变化及其规律。如《素问•天元纪大论》说：“物生谓之化，物极谓之变。阴阳不测谓之神。”
+> ②指人体生命活动及其规律。如《素问•六节脏象论》说：“五味入口，藏于肠胃，味有所藏，以养五气，气和而生，津液相成，神乃自生。”
+> ③指人体生命活动的外在表现。《内经》认为神的状态集中地反映着整个机体的健康情况，是诊断疾病、判别预后的重要依据。正如《素问•移精变气论》所说：“得神者昌，失神者亡。”
+> ④指人的精神意识思维活动。如《灵枢，本神》说：“心藏脉，脉舍神。”本文中的神，指的是人体生命活动。构成人体的基本物质是精，人的形体与生命活动都起源于精，正如《灵枢•经脉》所说：“人始生，先成精。”所以男女两精相互搏结，所形成的孕育着新生命的原始物质叫做精，所形成的生命活动称为神。
 >
-> (3）**“神”，指人的精神意识活动**。**“魂”，指思维意识活动**。如魂失去神的支配而单独活动，就会出现梦觉、幻觉、梦语、梦游等情况。故张景岳说：“魂之为言，如梦寐恍惚，变幻游行之境皆是也。”
+> **“神”，指人的精神意识活动**。**“魂”，指思维意识活动**。如魂失去神的支配而单独活动，就会出现梦觉、幻觉、梦语、梦游等情况。故张景岳说：“魂之为言，如梦寐恍惚，变幻游行之境皆是也。”
 >
 > **魄与魂同属于神，是先天具有的动作、感觉等本能活动和低级反应**。正如张景岳所说：“**魄之为用，能动能作，痛痒由之而觉也**。”
 >
@@ -322,9 +323,9 @@
 > “并精出入”意指魄是本能活动，所以与构成形体的精同时形成。与精同时形成的**本能活动与低级反应**称为魄。...
 >
 > 心主神明，心脏的疾患，能导致心神失常，而出现怔仲、健忘、烦躁、啼笑无常等病证。如张元素《肝脏虚实标本用药式》说：“心藏神，为君火，••••••本病，诸热瞀瘈、**惊惑、谵语、烦乱、啼笑、詈骂、怔忡、健忘、自汗**诸痛痒疮。”心神失常的病证，大多应由心入手治疗。如怔忡之证，《罗氏会约医镜》说：“怔忡者，心中跳动不动，如击鼓然，凡事不能用心，一思更甚，此因思索过劳，心血虚损而然，治宜生血养心，稍加凉血之味。”又如健忘之证，《寿世保元》认为与心脾有关，说：“夫健忘者，陡然而忘其事也。尽心力思量不来，为事有始无终，言谈不知首尾。盖主于心脾二经，心之官则思，脾之官亦主思，此因思虑过度，伤心则血耗散，神不守舍；伤脾则胃气衰惫，而疾愈深。二者皆主人事，则卒然而忘也。盖心主血，因血少而不能养其真脏，或停饮而气郁以生痰，气既滞，脾不得舒，是病皆作。治之必须先养其心血，理其脾土，凝神定智之剂，日以调理，亦当以幽闲之处，安乐之中，使其绝于忧虑，远其六欲七情，如此渐安矣。”再如虚烦不得眠之证，大多因心血虚或心气虚所致，《症因脉治》认为治疗应分别补益心血与心气，指出：“心血虚不得卧之治，阴虚则阳必旺，故心血不足，皆是火症，宜壮水之主，以制阳光。治宜滋阴降火，用归芍天地煎，黄连安神丸；虚人，天王补心丹。”又说：“心气虚不得卧之因，真阳素乏，木不生火，心气虚则心主无威，心神失守，而夜卧不安之症作矣。心气虚不得卧之脉，左寸浮散，按之无神，左关无力，木不生火，肝肾脉迟，水中无火，肝肾脉浮，真阳无根。心气虚不得卧之治，脉散无神，人参养营汤、归脾汤；肝肾脉迟者，八味丸；左关脉弱者，补肝散。”
-
+> 
 > 《黄帝内经讲解-气血精神-神的产生及其物质基础》
->
+
 
 
 
@@ -339,17 +340,16 @@
 > 所以《内经》十分强调发挥病人的主观能动性，提出医患要配合默契。认为“**病为本，工为标**，标本不得，邪气不服”（《素问•汤液醪醴论»)。《明医杂著》也指出：“必须病人受命，坚心定志，绝房室，息妄想，戒恼怒，节饮食，以自培其根，否则虽服良药，亦无他用。”治疗不但要准确辨证，选用适当的治疗手段，而且要健全志意，控制情绪和行为，自我调节精神活动，才能有利于疾病的痊愈。
 >
 > 《黄帝内经讲解-血气精神的重要作用》
->
 
 
 
-> “神明”，指人的思维，意志和整个精神活动。心，主宰全身，具有君主的职能，**人的精神意识、思维活动，从心产生出来。**心之所以主宰人体生命活动，产生精神意识思维，在脏腑中居于首要地位，是因为“心主血脉”和“心主神明”的缘故。**精神意识活动虽与五脏有关，但都要受心的统帅和支配**。另一方面，心主神明的作用，又是在**心主血脉的基础上产生**。《灵枢•本神》说：“心藏脉，脉舍神。”十分精僻地说明了心、血脉与神志三者的内在联系。中医学把精神意识思维活动归属于心，实质上意在强调**神不能离开精的营养，精不能离开血液的营养**，所以《灵枢，营卫生会》说：“血者，神气也。”后世医家李东垣也明确指出：“**心之神……得血则生**”。...
+> “神明”，指人的思维，意志和整个精神活动。心，主宰全身，具有君主的职能，**人的精神意识、思维活动，从心产生出来。**心之所以主宰人体生命活动，产生精神意识思维，在脏腑中居于首要地位，是因为“心主血脉”和“心主神明”的缘故。**精神意识活动虽与五脏有关，但都要受心的统帅和支配**。另一方面，心主神明的作用，又是在**心主血脉的基础上产生**。《灵枢•本神》说：“心藏脉，脉舍神。”十分精僻地说明了心、血脉与神志三者的内在联系。中医学把精神意识思维活动归属于心，实质上意在强调**神不能离开精的营养，精不能离开血液的营养**，所以《灵枢•营卫生会》说：“血者，神气也。”后世医家李东垣也明确指出：“**心之神……得血则生**”。...
 >
 > **肝**为刚脏，喜条达而恶抑郁。肝气太过，失于疏泄，易于使**急躁发怒**。肝脏内寄相火，肝阳易于偏亢。所以将肝比喻为刚强急躁的将军。
 >
 > “谋”，策划。“虑”，思考。**肝主谋虑**，与肝气的升发作用以及肝藏血的功能有关。当人们深谋远虑，筹划策略，进行紧张思维活动的时候，需要肝气的升发和肝血的供给，而肝血的输送，又赖肝气的升发，故张景岳说：“木主发生，故为谋虑所出。”
 >
-> **胆者，中正之官，决断出焉(5)**
+> **胆者，中正之官，决断出焉**
 >
 > “中正”，古代（秦汉时代）考核人品的官职。“决断”，即判断决定。当人们对事物作出判断决定的时候，应持刚正果断的正确态度。此指胆有使人刚毅正直、不偏不倚，正确处理问题的功能。临床上**胆气虚**的患者，常表现为**易惊、易恐、多疑、不决**。可见胆在精神意识思维活动过程中，起着判断决定的作用。
 >
@@ -366,11 +366,10 @@
 > “使道”，相使之道。王冰说：“谓**神气行使之道**也。”即十二脏相互通行气血的道路。“宗”，指宗庙，引申为国家的统治地位。在十二官中，心为五脏六腑之大主，对各脏腑功能活动起着统帅调节的作用，所以心脏功能正则**血脉运行流畅，神有所主**，各脏腑协调统一，才会有正常的生理活动，所以说“主明则下安”。根据这个道理养生，就能健康长寿，终身不会发生重病，比拟一个国家而言，领导英明，各部门配合得好，国家就一定强盛。反之，如**心脏功能不足，则人体脏腑之间相互协调的关系便会破坏，各脏腑都要受到危害，气血通行的道路也会闭塞不通，使形体遭受很大的损伤**，就会影响人的健康和寿命。譬之国家，则必使天下大乱，政权不稳，这是必须引起深刻注意的。
 >
 > 《黄帝内经讲解-藏象-十二脏的生理功能及其相互关系》
->
 
 
 
-> **心者，五藏六腑之大主也，精神之所舍也(1)，其藏坚固，邪弗能容也(2)。容之则心伤，心伤则神去，神去则死矣(3)。**
+> **心者，五藏六腑之大主也，精神之所舍也，其藏坚固，邪弗能容也。容之则心伤，心伤则神去，神去则死矣。**
 >
 > “精神之所舍”，指藏神的处所。人的精神意识思维活动，虽分属五脏，与五脏的心理功能有密切的联系。但又**由心产生，由心主宰**，因此七精所伤，总由心先受之，而后影响他脏。如心神思虑过度则伤脾、心神忧伤太过则伤肺，所以从心主神明，直接影响着五脏六腑生理功能协调平衡这一点而言，**心是藏神的处所，又是五脏六腑的主宰**。正如张景岳所说：“**心为脏腑之主，而总统魂魄，并赅意志，故忧动于心则肺应，思动于心则脾应，怒动于心则肝应，恐动于心则肾应，此所以五志唯心所使**也。”
 >
@@ -379,14 +378,12 @@
 > 心主血脉，全身脏腑组织赖心血濡养而维持其正常机能，同时又主神明，为精神思维活动的中枢，所以五脏六腑在心的协调下，才能维持正常的生理活动，假如   邪气入侵心脏，就会损伤心脏，以至神气耗散，人即死亡。
 >
 > 《黄帝内经讲解-藏象-心为五脏六腑之大王》
->
 
-> **黄帝问于岐伯曰：愿闻人之始生，何气筑为基？何立而为楣？何失而死？何得而生（1）？岐伯曰：以母为基，以父为楯，失神者死，得神者生也（2）。**
+> **黄帝问于岐伯曰：愿闻人之始生，何气筑为基？何立而为楣？何失而死？何得而生？岐伯曰：以母为基，以父为楯，失神者死，得神者生也。**
 >
 > 父母之精相合，形成胚胎，凝聚先后天精气构成人体，精气不但具有物质性，是构成人体的基本物质，而且还具有无限的生命力，**人的生命活动就是构成人体精气的生命力的具体表现**，所以称为神气，**人有神气才能维持生命，失神气就会导致死亡**。
 >
 > 《黄帝内经讲解-藏象-寿夭与先后天的关系》
->
 
 #### 《黄帝内经》
 
@@ -394,17 +391,15 @@
 >
 > 今时之人不然也，以酒为浆，以妄为常，醉以入房，以欲竭其精，以耗散其真，不知持满，**不时御神**，务快其心，逆于生乐，起居无节，故半百而衰也。
 >
-> 《黄帝内经》
->
+> ——《黄帝内经•》
 
-> **血、脉、营、气、精、神，此五藏之所藏也⑴。至其淫泆离脏则精失，魂魄飞扬，志意恍乱，智虑去身(2)。**
+> **血、脉、营、气、精、神，此五藏之所藏也⑴。至其淫泆离脏则精失，魂魄飞扬，志意恍乱，智虑去身。**
 >
-> 《灵枢•本神•》
->
+> ——《灵枢•本神》
 
 ## 题目
 
-1. 魂、魄管理人体的平衡，其中-----管理高级功能，比如思想等；----管理低级功能，比如生理本能等。
-2. 人要具有正常对待事物的能力，需要包括意、志、思、虑、智等五个不同的过程。其中对事物表象进行认识，在心中产生印象称为忆（意）；对事物表象认识的存储、积累称为----；对事物进行反复分析、比较的过程称为------；反复思考的基础上，由近而远地估计未来变化的思维过程称为-----;最终人形成了能够正常对待事物的能力，称为------；
+1. 魂、魄管理人体的平衡，其中 __ __ 管理高级功能，比如思想等； __ __ 管理低级功能，比如生理本能等。
+2. 人要具有正常对待事物的能力，需要包括意、志、思、虑、智等五个不同的过程。其中对事物表象进行认识，在心中产生印象称为忆（意）；对事物表象认识的存储、积累称为 __ __ ；对事物进行反复分析、比较的过程称为 __ __ ；反复思考的基础上，由近而远地估计未来变化的思维过程称为 __ __ ；最终人形成了能够正常对待事物的能力，称为 __ __ ；
 3. 结合上节关于精的叙述，谈谈精与神在人维持自身阴阳平衡中的作用。
 
