--- a/ok/wk/wk07-0.3.0.0.0.md
+++ b/ok/wk/wk07-0.3.0.0.0.md
@@ -56,7 +56,7 @@
 
 （五）临证权变
 
-乳痈经治疗后，常有局部肿块，不红不热，经久不消，微痛，舌苔薄白，脉弦缓。或由凉药太过所致（也括内服外用），或由肝气郁结所致。治宜疏肝理气，温阳消肿。方用四逆散加鹿角、肉桂、桃仁、红花。温则血行，络脉通畅，肿硬消散（中医研究院施汉章方）。乳痈后期又有因切口不当，或因腐溃乳管而致脓水、乳汁淋漓不断，日久不愈，此为乳漏。治法参见第九节。
+乳痈经治疗后，常有局部肿块，不红不热，经久不消，微痛，舌苔薄白，脉弦缓。或由凉药太过所致（包括内服外用），或由肝气郁结所致。治宜疏肝理气，温阳消肿。方用四逆散加鹿角、肉桂、桃仁、红花。温则血行，络脉通畅，肿硬消散（中医研究院施汉章方）。乳痈后期又有因切口不当，或因腐溃乳管而致脓水、乳汁淋漓不断，日久不愈，此为乳漏。治法参见第九节。
 
 注①穿刺抽脓操作方法：
 
