update ok/wk/wk08-0.1.0.0.0.md. 入缺盆。

--- a/ok/wk/wk08-0.1.0.0.0.md
+++ b/ok/wk/wk08-0.1.0.0.0.md
@@ -8,7 +8,7 @@
 
 〔瘿部和脏腑经络的关系〕
 
-瘿的部位在颈前结喉两侧，此处是群经交会的部位之一。如手太阴肺经至喉部。足阳明胃经，从大迎前下人迎，循喉咙，入缺盆，足太阴脾经上膈，挟咽，连舌本，散舌下。手少阴心经，从心系上挟咽，系目系。手太阳小肠之脉，络心，循咽，下膈。肾足少阴之脉，入肺中，循喉咙，挟舌本。肝足厥阴之脉，布胁肋，循喉咙之后，上入颃颡。任脉，起于中极穴，沿腹胸部正中直上，达咽喉，至下唇内。冲脉挟脐上行，经喉，环绕口唇。督脉，其少腹直上者，贯脐中央，上贯心，入喉，上颐环唇。可见心、肝、脾、肺、肾五脏之经脉均至该部，督任等脉亦至此处。所以瘿与这些脏腑经络的关系就十分密切。
+瘿的部位在颈前结喉两侧，此处是群经交会的部位之一。如手太阴肺经至喉部。足阳明胃经，从大迎前下人迎，循喉咙，入缺盆。足太阴脾经上膈，挟咽，连舌本，散舌下。手少阴心经，从心系上挟咽，系目系。手太阳小肠之脉，络心，循咽，下膈。肾足少阴之脉，入肺中，循喉咙，挟舌本。肝足厥阴之脉，布胁肋，循喉咙之后，上入颃颡。任脉，起于中极穴，沿腹胸部正中直上，达咽喉，至下唇内。冲脉挟脐上行，经喉，环绕口唇。督脉，其少腹直上者，贯脐中央，上贯心，入喉，上颐环唇。可见心、肝、脾、肺、肾五脏之经脉均至该部，督任等脉亦至此处。所以瘿与这些脏腑经络的关系就十分密切。
 
 根据经络所属和临床上反复验证可知甲状腺的生理作用十分重要，它能辅助五脏，统帅督任，促进气化，维持形神正常发育，协调阴阳平秘。
 
