--- a/ok/bc/bc02-0.2.2.0.0.md
+++ b/ok/bc/bc02-0.2.2.0.0.md
@@ -1,6 +1,6 @@
 ### 郁李仁
 
-〔原文〕**辛苦而甘，入脾经气分。性降，下气行水，破血润燥。治水肿癃急(1)，大肠气滞，关格(2)不通.用酒能入胆，治悸，目张不眠。**一妇因大恐而病，愈后目张不瞑。钱乙曰：目系内连肝胆，恐则气结，胆横不下。郁李润能散结，随酒入胆，结去胆下，而目瞑矣。**然治标之剂，多服渗人津液。去皮、尖，蜜浸、研。**
+〔原文〕**辛苦而甘，入脾经气分。性降，下气行水，破血润燥。治水肿癃急(1)，大肠气滞，关格(2)不通。用酒能入胆，治悸，目张不眠。**<small>一妇因大恐而病，愈后目张不瞑。钱乙曰：目系内连肝胆，恐则气结，胆横不下。郁李润能散结，随酒入胆，结去胆下，而目瞑矣。</small>**然治标之剂，多服渗人津液。去皮、尖，蜜浸、研。**
 
 
 
