--- a/ok/wk/wk06-1.1.0.0.0.md
+++ b/ok/wk/wk06-1.1.0.0.0.md
@@ -1,6 +1,6 @@
 ## 第一节 疖
 
-疖是生于皮肤浅表的急性化脓性疾患。疖之病名，首见于《刘涓子鬼遗方》（公元499年），元•齐德之的《外科精义》中，对疖作了专门论述。《外科理例》中论述本病有色红、灼热、疼痛、突起、根浅，范围多在一、二寸，出脓即愈的特点。疖按形铱可分为有头疖（疮的中心部位一开始就有一脓栓）、无头疖（疮的中心光软无脓栓）；按病情特征可分为“暑疖”、“蝼蛄节”和“疖病”（多发性疖）三种。疖发于暑天，症状轻而易治者，称暑疖，一般说的“疖无大小，出脓就好”就是指暑疖。如果疖头部，治疔护埋不当，则互相蔓延而成“蝼蛄疖”（又名“蟮拱头”）。若反复发作，日久不瘥的则称为“疖病”，治疗不易。虽然它们的性质都属于疖的范畴，但证治不同，故分别叙述。
+疖是生于皮肤浅表的急性化脓性疾患。疖之病名，首见于《刘涓子鬼遗方》（公元499年），元•齐德之的《外科精义》中，对疖作了专门论述。《外科理例》中论述本病有色红、灼热、疼痛、突起、根浅，范围多在一、二寸，出脓即愈的特点。疖按形状可分为有头疖（疮的中心部位一开始就有一脓栓）、无头疖（疮的中心光软无脓栓）；按病情特征可分为“暑疖”、“蝼蛄节”和“疖病”（多发性疖）三种。疖发于暑天，症状轻而易治者，称暑疖，一般说的“疖无大小，出脓就好”就是指暑疖。如果疖头部，治疔护埋不当，则互相蔓延而成“蝼蛄疖”（又名“蟮拱头”）。若反复发作，日久不瘥的则称为“疖病”，治疗不易。虽然它们的性质都属于疖的范畴，但证治不同，故分别叙述。
 
 一、暑疖
 
@@ -78,7 +78,7 @@
 
 三、疖病
 
-多个疖子在一定部位或散在身体各处反复发作的叫疖病，或称”多发性疖”。其特点是此伏彼起，日久不去愈。若生于项后发际部的称“发际疮”；生于臀部的叫“坐板疮”。任何季节都可发生，多见于青壮年。
+多个疖子在一定部位或散在身体各处反复发作的叫疖病，或称”多发性疖”。其特点是此伏彼起，日久不愈。若生于项后发际部的称“发际疮”；生于臀部的叫“坐板疮”。任何季节都可发生，多见于青壮年。
 
 〔病因病机〕
 
