--- a/ok/bc/bc02-0.2.3.0.0.md
+++ b/ok/bc/bc02-0.2.3.0.0.md
@@ -1,6 +1,6 @@
 ### 海松子
 
-〔原文〕**甘温。润肺温胃，散水除风。治咳嗽** 松子一两，胡桃二两，炼蜜和服，治肺燥咳嗽。**虚秘。**同柏子仁、麻，溶蜡为丸，名三仁丸。**出辽东、云南。松须五鬣。**
+〔原文〕**甘温。润肺温胃，散水除风。治咳嗽**<small>松子一两，胡桃二两，炼蜜和服，治肺燥咳嗽。</small>**虚秘。**<small>同柏子仁、麻，溶蜡为丸，名三仁丸。</small>**出辽东、云南。松须五鬣。**
 
 【讲解】**海松子功专润肺滑肠。**为松科常绿乔木红松的种子，又名松子、松子仁。多产于东北、云南等地。
 
