update ok/wk/wk06-1.2.0.0.0.md. 原文有“烂疔，疫疔”，应为“烂疔、疫疔”，电子版已改。

--- a/ok/wk/wk06-1.2.0.0.0.md
+++ b/ok/wk/wk06-1.2.0.0.0.md
@@ -18,7 +18,7 @@
 
 2.有头疽：虽然初起亦有一粟粒样脓头，但逐渐形成多头或蜂窝状、红肿范围往往超过9厘米以上，多发于项背部肌肉丰厚之处，颜面、手足部少见，发病较慢，病程较长。
 
-3.烂疔，疫疔应与丹毒鉴别：丹毒常有反复发作史，局部皮色鲜红，边界清楚，高出周围皮肤，压之能退色，一般无水泡或只有小水泡，局部无坏死现象，亦无脐凹状的黑色外形。
+3.烂疔、疫疔应与丹毒鉴别：丹毒常有反复发作史，局部皮色鲜红，边界清楚，高出周围皮肤，压之能退色，一般无水泡或只有小水泡，局部无坏死现象，亦无脐凹状的黑色外形。
 
 （二）论治要点
 
