update ok/wk/wk06-1.2.0.0.0.md. 原文有“烂庁是一种容易腐烂的疮科大证”，应为“烂庁是一种容易腐烂的疡科大证“，电子版已改。

--- a/ok/wk/wk06-1.2.0.0.0.md
+++ b/ok/wk/wk06-1.2.0.0.0.md
@@ -42,7 +42,7 @@
 
 治法：同颜面部疔疮。
 
-4.烂疔：烂庁是一种容易腐烂的疮科大证，多发于足部。患者多为战士和农民，发病前有皮肉破损，接触潮湿泥土、脏衣、脏物等情况。烂疔初期，多在皮肤破损处，感觉胀痛，伤口周围呈暗红色，旋即迅速蔓延成片，状如丹毒，寒战后继发高热，体温上升常达40℃以上。头痛，神昏谵语，多数病例在发热一昼夜后身热略降至38°～40°C之间。神识时清时昏，烦渴引饮，食欲不振，小便短赤，脉洪滑数，苔黄焦燥。继则患处灼热，疼痛剧烈，皮肤上形成大水泡，破溃后流出淡棕色浆水，有时带有气泡。此时肌肉大部分已腐坏，脓汁恶臭，四周变为紫黑色，中心部有紫红色或浅黄色死肌，如煮熟之牛肉。其疮面略带凹形。正如唐代孙思邈所论，“烂疔其状色稍黑，有白瘢，疮溃有脓水流出，大小如匙面。”若能正确治疗，则身热渐退，患处四周红肿消失，腐肉与正常皮肤分界明显，并在分界处流出稠脓者为好转之征，尔后腐脱新生，即使疮面甚大，也不难收口而愈，若身热不退，持续昏迷，患处腐烂及肿势继续蔓延不止者，1〜3日内即容易走黄而死亡。
+4.烂疔：烂庁是一种容易腐烂的疡科大证，多发于足部。患者多为战士和农民，发病前有皮肉破损，接触潮湿泥土、脏衣、脏物等情况。烂疔初期，多在皮肤破损处，感觉胀痛，伤口周围呈暗红色，旋即迅速蔓延成片，状如丹毒，寒战后继发高热，体温上升常达40℃以上。头痛，神昏谵语，多数病例在发热一昼夜后身热略降至38°～40°C之间。神识时清时昏，烦渴引饮，食欲不振，小便短赤，脉洪滑数，苔黄焦燥。继则患处灼热，疼痛剧烈，皮肤上形成大水泡，破溃后流出淡棕色浆水，有时带有气泡。此时肌肉大部分已腐坏，脓汁恶臭，四周变为紫黑色，中心部有紫红色或浅黄色死肌，如煮熟之牛肉。其疮面略带凹形。正如唐代孙思邈所论，“烂疔其状色稍黑，有白瘢，疮溃有脓水流出，大小如匙面。”若能正确治疗，则身热渐退，患处四周红肿消失，腐肉与正常皮肤分界明显，并在分界处流出稠脓者为好转之征，尔后腐脱新生，即使疮面甚大，也不难收口而愈，若身热不退，持续昏迷，患处腐烂及肿势继续蔓延不止者，1〜3日内即容易走黄而死亡。
 
 治法：清热利湿，凉血解毒。
 
