--- a/ok/bc/bc02-0.2.4.0.0.md
+++ b/ok/bc/bc02-0.2.4.0.0.md
@@ -1,8 +1,8 @@
 ### 蜂蜜
 
-〔原文〕**草木精英，合露气以酿成。生性凉，能清热；熟性温，能补中。甘而和，故解毒；柔而滑，故润燥。甘缓可以去急，故止心腹肌肉疮疡诸瘸；甘缓可以和中，故能调营卫，通三焦，除众病，和百药，**故丸药多用之。**而与甘草同功。止嗽治痢，**解毒润肠，最治痢疾，姜汁和服甚佳。**明目悦颜。同薤白捣，涂烫火伤，煎炼成胶，通大便秘。**乘热纳谷道中，名蜜煎导。**然能滑肠，泄泻与中满者忌用。以白如膏者良。**汪颖曰：蜜以花为主，闽广蜜热，川蜜温，西蜜凉。安宣州有黄连蜜，味小苦，点目热良。西京有梨花蜜，色白如脂。**用银石器，每蜜一斤，入水四南，桑火慢熬，掠出浮沫，至滴水成珠用。忌葱、鲜萵苣同食。**昂按：生葱同蜜食杀人，而萵苣蜜渍点茶者颇多，未见作害，岂醃过则无患乎？抑药忌亦有不尽然者乎？
+〔原文〕**草木精英，合露气以酿成。生性凉，能清热；熟性温，能补中。甘而和，故解毒；柔而滑，故润燥。甘缓可以去急，故止心腹肌肉疮疡诸痛；甘缓可以和中，故能调营卫，通三焦，除众病，和百药，**<small>故丸药多用之。</small>**而与甘草同功。止嗽治痢，**<small>解毒润肠，最治痢疾，姜汁和服甚佳。</small>**明目悦颜。同薤白捣，涂烫火伤，煎炼成胶，通大便秘。**<small>乘热纳谷道中，名蜜煎导。</small>**然能滑肠，泄泻与中满者忌用。以白如膏者良。**<small>汪颖曰：蜜以花为主，闽广蜜热，川蜜温，西蜜凉。安宣州有黄连蜜，味小苦，点目热良。西京有梨花蜜，色白如脂。</small>**用银石器，每蜜一斤，入水四南，桑火慢熬，掠出浮沫，至滴水成珠用。忌葱、鲜萵苣同食。**<small>昂按：生葱同蜜食杀人，而萵苣蜜渍点茶者颇多，未见作害，岂醃过则无患乎？抑药忌亦有不尽然者乎？</small>
 
-**黄蜡，甘温。止痛生肌，疗下痢，**蜜质季性润，故滑肠胃，蜡质坚性涩，故止泻痢。**续绝伤。**按：蜜、蜡皆蜂所酿成，而蜜味至甘，蜡味至淡。故今人言无味者，谓之嚼蜡。
+**黄蜡，甘温。止痛生肌，疗下痢，**<small>蜜质季性润，故滑肠胃，蜡质坚性涩，故止泻痢。</small>**续绝伤。**<small>按：蜜、蜡皆蜂所酿成，而蜜味至甘，蜡味至淡。故今人言无味者，谓之嚼蜡。</small>
 
 【讲解】**蜂蜜善能润肺滑肠，并可缓急止痛。**为蜂蜜科昆虫中华蜜蜂或意大利蜂在蜂巢内酿成的蜜糖。又名白蜜。原蜜加水稀释、煮沸，滤去杂质，再浓缩后药用。
 
