--- a/ok/wk/wk07-0.3.0.0.0.md
+++ b/ok/wk/wk07-0.3.0.0.0.md
@@ -96,7 +96,7 @@
 
 〔文献摘录〕
 
-1.《备急千金要方•卷二十二》："发乳，若热，手不可得近者，先内服王不留行散，外摩发背膏……候手按之，随手即起者，疮熟也，须针之，针法要得著腋，以意消息。”（发乳似为乳痈。《肘后方》之“妒乳”，亦似为乳痈）
+1.《备急千金要方•卷二十二》："发乳，若热，手不可得近者，先内服王不留行散，外摩发背膏……候手按之，随手即起者，疮熟也，须针之，针法要得著脓，以意消息。”（发乳似为乳痈。《肘后方》之“妒乳”，亦似为乳痈）
 
 2.《外科理例•卷四》乳痈“肿焮痛甚者，清肝消毒。焮痛发寒热者，发散表邪。未成脓者，疏肝行气。不作脓或不溃，托里为主。
 
