update ok/wk/wk06-1.2.0.0.0.md. 原文有“现病史：五天前左手掌作工时竹刺扎伤，两天前突然恶寒发热，左手掌内起一脓疱，四周红肿，坚硬疼痛，并有红线上引。检查：左侧手掌及手背红肿明显，手掌偏大拇指旁有一脓疱，按之坚硬压痛，沿挠侧手腕有一红线，上至肘窝。体皞39.2℃,白细胞计数19200/立方毫米，中性86％。 ”，应为“现病史：五天前左手掌作工时竹刺扎伤，两天前突然恶寒发热，左手掌内起一脓疱，四周红肿，坚硬疼痛，并有红线上引。 检查：左侧手掌及手背红肿明显，手掌偏大拇指旁有一脓疱，按之坚硬压痛，沿挠侧手腕有一红线，上至肘窝。体温39.2℃,白细胞计数19200/立方毫米，中性86％。 ”，电子版已改。

--- a/ok/wk/wk06-1.2.0.0.0.md
+++ b/ok/wk/wk06-1.2.0.0.0.md
@@ -120,7 +120,8 @@
 
 主诉：左手掌肿痛，怕冷发热两天。
 
-现病史：五天前左手掌作工时竹刺扎伤，两天前突然恶寒发热，左手掌内起一脓疱，四周红肿，坚硬疼痛，并有红线上引。检查：左侧手掌及手背红肿明显，手掌偏大拇指旁有一脓疱，按之坚硬压痛，沿挠侧手腕有一红线，上至肘窝。体皞39.2℃,白细胞计数19200/立方毫米，中性86％。
+现病史：五天前左手掌作工时竹刺扎伤，两天前突然恶寒发热，左手掌内起一脓疱，四周红肿，坚硬疼痛，并有红线上引。
+检查：左侧手掌及手背红肿明显，手掌偏大拇指旁有一脓疱，按之坚硬压痛，沿挠侧手腕有一红线，上至肘窝。体温39.2℃,白细胞计数19200/立方毫米，中性86％。
 
 脉弦细数，舌质红，苔薄黄腻。
 
