update ok/wk/wk06-1.2.0.0.0.md. 原文有“掌心脓疤已破”，应为“掌心脓疱已破”，电子版已改。

--- a/ok/wk/wk06-1.2.0.0.0.md
+++ b/ok/wk/wk06-1.2.0.0.0.md
@@ -135,7 +135,7 @@
 
 药用：马尾连6克、黄芩9克、丹皮9克、赤芍9克、丝瓜络9克、银花9克、草河车9克、蒲公英9克、天葵草9克、生甘草6克。二剂，水煎服，外敷玉露膏。
 
-二诊：（5月10日）手背红肿已消，臂部红线已退，掌心脓疤已破，尚留余肿，疼痛显轻，恶寒高热渐挫。脉细滑，舌苔黄腻。治以清解余毒。
+二诊：（5月10日）手背红肿已消，臂部红线已退，掌心脓疱已破，尚留余肿，疼痛显轻，恶寒高热渐挫。脉细滑，舌苔黄腻。治以清解余毒。
 
 药用：紫地丁9克、菊花9克、银花9克、连翘9克、绿豆衣9克、赤芍9克、丝瓜络9克，二剂后治愈。（节选自《朱仁康临床经验集》）
 
