update ok/wk/wk06-1.2.0.0.0.md. 原文有：”久不掳散“，应为：”久不摅散“，电子版已改

--- a/ok/wk/wk06-1.2.0.0.0.md
+++ b/ok/wk/wk06-1.2.0.0.0.md
@@ -143,7 +143,7 @@
 
 1.《素问•生气通天论》：“膏粱之变，足生大丁。”（泛指大的重的外疡，非“疔疮”之”疔”。）
 
-2.《中藏经》将面部疮疡，定名为疔。并说：”皆由喜怒忧思，冲寒冒热，恣饮醇酒，多嗜甘肥，毒鱼炸酱，色欲过度之所为也。蓄其毒邪，浸渍脏腑，久不掳散，使变为疔。”“五疔之候，最为巨疾。”（论说病因较全面）
+2.《中藏经》将面部疮疡，定名为疔。并说：”皆由喜怒忧思，冲寒冒热，恣饮醇酒，多嗜甘肥，毒鱼炸酱，色欲过度之所为也。蓄其毒邪，浸渍脏腑，久不摅散，使变为疔。”“五疔之候，最为巨疾。”（论说病因较全面）
 
 3.《疡科心得集•卷上》，“唇疔生于上下嘴唇，系脾胃两经火毒所致。……治宜急泄火毒，勿损其脾胃之气，毒易散矣。以蟾酥丸、犀角地黄汤主之。……又初时须细？腿弯委中穴，有紫黑筋，用长针刺破出血，其毒即泄。”
 
