--- a/ok/wk/wk04.md
+++ b/ok/wk/wk04.md
@@ -12,7 +12,7 @@
 
 辨证论治是中医临证的基础，外科学的辨证，有其特点。
 
-疮疡辨证，首辨阴阳，《疡医大全》说，“凡诊视痈疽，施治，必须先审阴阳……。医道虽繁，可以一言以蔽之曰阴阳而已。”而对疮疡局部症状的辨认，又是辨阴阳的主要依据，所以，肿痛痒脓的辨别，对于疮疡的诊断和治疗有重要意义。此外，辨善恶顺逆，为外科所独有。
+疮疡辨证，首辨阴阳，《疡医大全》说：“凡诊视痈疽，施治，必须先审阴阳……。医道虽繁，可以一言以蔽之曰阴阳而已。”而对疮疡局部症状的辨认，又是辨阴阳的主要依据，所以，肿痛痒脓的辨别，对于疮疡的诊断和治疗有重要意义。此外，辨善恶顺逆，为外科所独有。
 
 内痈的辨证特点是不仅要辨清疾病的性质、部位、脏腑所属，还必须进一步辨清手术指征与非手术指征，才能充分发挥中医的长处而又不贻误病人。
 
