缺字，标点 原文有“可以概括表-热、实证”，应为“阳可以概括表、热、实证”，电子版已改。

--- a/ok/wk/wk04.md
+++ b/ok/wk/wk04.md
@@ -24,7 +24,7 @@
 
 （一）辨阴阳
 
-辨阴阳是八纲辨证之总纲。可以概括表-热、实证，阴可以概括里、寒、虚证。外科要从局部症状和全身症状两方面结合起来综合分析阴阳，简单概括如表1：
+辨阴阳是八纲辨证之总纲。阳可以概括表、热、实证，阴可以概括里、寒、虚证。外科要从局部症状和全身症状两方面结合起来综合分析阴阳，简单概括如表1：
 
 | 证类     |      | 阳证                                                         | 阴证                                                         |
 | -------- | ---- | ------------------------------------------------------------ | ------------------------------------------------------------ |
