缺字 原文有“发病急，变化快 ”，应为“发病较急，变化快 ”，电子版已改。

--- a/ok/wk/wk04.md
+++ b/ok/wk/wk04.md
@@ -28,7 +28,7 @@
 
 | 证类     |      | 阳证                                                         | 阴证                                                         |
 | -------- | ---- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 病势     |      | 发病急，变化快                                               | 发病较慢，变化慢                                             |
+| 病势     |      | 发病较急，变化快                                              | 发病较慢，变化慢                                             |
 | 病位     |      | 在表，位浅，多发于皮肉                                       | 在里，位深，多发于筋骨，脏腑                                 |
 | 局部症状 | 皮温 | 灼热，得冷则舒                                               | 不热或微热，得暖则适                                         |
 | 局部症状 | 皮色 | 焮红光亮                                                     | 皮色不变或紫暗                                               |
