rename ok/wk/wk09-0.3.0.0.0.md to ok/wk/  wk09-0.3.0.0.0.md. 原文“注射完毕后，外盖消毒纱布，注射后仅有作胀感，”应为“注射完毕后，外盖消毒纱布。 注射后仅有作胀感，”

--- a/ok/wk/  wk09-0.3.0.0.0.md
+++ b/ok/wk/  wk09-0.3.0.0.0.md
@@ -28,7 +28,7 @@
 
 1.压迫法：长期用棉花垫或橡胶海绵直接按放在瘤体的外面，并以橡皮膏及绷带加压固定。患在下肢者，可穿着厚弹力袜，有时能使血瘤缩小或消失。
 
-2.注射疗法，先于血瘤局部碘酒，酒精消毒后，用消痔灵注射液与1%普鲁卡因1:1注射于瘤体内，每次注射的药量，视瘤体大小而定，一般在3厘米左右的注射4〜5毫升药液，可依次类推。退针至皮肤处再注入少量药液，减少针孔渗血，注射完毕后，外盖消毒纱布，注射后仅有作胀感，经1〜2天可消失，瘤体部有轻度肿胀，经3〜4天逐渐消失。患处逐渐发硬萎缩，2周后若有部分尚未萎缩，再以前法补注一次。
+2.注射疗法，先于血瘤局部碘酒，酒精消毒后，用消痔灵注射液与1%普鲁卡因1:1注射于瘤体内，每次注射的药量，视瘤体大小而定，一般在3厘米左右的注射4〜5毫升药液，可依次类推。退针至皮肤处再注入少量药液，减少针孔渗血，注射完毕后，外盖消毒纱布。注射后仅有作胀感，经1〜2天可消失，瘤体部有轻度肿胀，经3〜4天逐渐消失。患处逐渐发硬萎缩，2周后若有部分尚未萎缩，再以前法补注一次。
 
 （五）临证权变
 
