错字 原文有“烦躁多渴，局热面赤 ”，应为“烦躁多渴，高热面赤 ”，电子版已改。

--- a/ok/wk/wk04.md
+++ b/ok/wk/wk04.md
@@ -51,7 +51,7 @@
 
 辨虚实，无论在疮疡还是内痈中，对观察邪正之盛衰，对确定治法之补泻及判断预后之好坏，均有直接指导意义。
 
-1.实证：腹满膨胀，疼痛拒按，胸膈痞闷，口苦咽干，烦躁多渴，局热面赤，精神昏塞或有黄疸，苔腻，脉洪大，为脏腑实热。或有脘腹剧痛，形寒肢冷，面色青晦或苍白，苔白滑，脉弦紧，为脏腑寒实。或者疮疡肿起色赤，皮肤壮热，脓水稠粘，寒热疼痛，大便干结，小便如淋，心神烦闷，恍惚不宁，为邪气之实。
+1.实证：腹满膨胀，疼痛拒按，胸膈痞闷，口苦咽干，烦躁多渴，高热面赤，精神昏塞或有黄疸，苔腻，脉洪大，为脏腑实热。或有脘腹剧痛，形寒肢冷，面色青晦或苍白，苔白滑，脉弦紧，为脏腑寒实。或者疮疡肿起色赤，皮肤壮热，脓水稠粘，寒热疼痛，大便干结，小便如淋，心神烦闷，恍惚不宁，为邪气之实。
 
 2.虚证：泻痢肠鸣，饮食不入，呕吐无时，脘腹账满，隐疼喜按，手足冰冷，精神疲惫，声低息微，小便清长或小便时难，舌淡，脉弱，为脏腑之虚。脓水清稀，疮口日久不敛，肌寒肉冷，自汗不止，面色苍白或萎黄，舌淡，脉细弱，为气血之虚。精滑不固，大便自利，腰脚沉重，睡卧不宁，为下元亏虚。
 
