update ok/wk/wk12-0.4.0.0.0.md. 1、将最后一段“痒起白屑，形如癣疥，由胎中血热，落草受风缠绵、此系干？“修改为”痒起白屑，形如癣疥，由胎中血热，落草受风缠绵，此系干𤼏。“ 2、将“延及遍身即成湿？”修改为“延及遍身即成湿𤼏”。

--- a/ok/wk/wk12-0.4.0.0.0.md
+++ b/ok/wk/wk12-0.4.0.0.0.md
@@ -68,4 +68,4 @@
 
 〔文献摘录〕
 
-《医宗金鉴•外科心法•婴儿部•胎𤼏疮》“此证生婴儿头顶或生眉端，又名奶癣，痒起白屑，形如癣疥，由胎中血热，落草受风缠绵、此系干？。有误用烫洗，皮肤起粟，瘙痒无度，黄水浸淫，延及遍身即成湿？，具服消风导赤汤，干者擦润肌膏，湿者用嫩黄柏头末与滑石等分撒之”。
+《医宗金鉴•外科心法•婴儿部•胎𤼏疮》“此证生婴儿头顶或生眉端，又名奶癣，痒起白屑，形如癣疥，由胎中血热，落草受风缠绵、此系干𤼏。有误用烫洗，皮肤起粟，瘙痒无度，黄水浸淫，延及遍身即成湿？，具服消风导赤汤，干者擦润肌膏，湿者用嫩黄柏头末与滑石等分撒之”。
