update ok/fjx/fjx02-0.2.0.0.0.md. 因本方具疏肝解郁之效, ,改为， 柴胡疏肝解郁, ,改为， 还助苓，术以和中  ，改为、

--- a/ok/fjx/fjx02-0.2.0.0.0.md
+++ b/ok/fjx/fjx02-0.2.0.0.0.md
@@ -4,9 +4,9 @@
 
 〔服法〕原方为粗末，每服二钱，水一大盏，烧生姜一块切破，薄荷少许，同煎至七分，去滓热服，不拘时候。（加生姜、薄荷少许，水煎服）
 
-〔讲解〕本方主治血虚之体而兼肝郁脾虚，肝脾不和所致之胁痛证。因本方具疏肝解郁之效,使肝郁得解，脾虚得健，血虚得养，血虚得养，气血和畅，则肝郁脾虚之病愈，胁痛自除。故以“逍遥”命名。肝脾与气血密切相关，肝郁则气滞，乘脾则脾虚。脾为后天之本，气血生化之源，脾虚又可导致血虚。血虚肝易郁滞，由此可见，“肝郁血虚”、“血虚肝郁”可互为因果。肝胆相表里，其经布胸胁，病则经气不舒，肝郁则胁痛乳胀，头痛目眩，口燥咽干。肝脾不和，气滞血瘀，则月经不调。肝脾不和，脾失健运，则神疲食少。舌淡红、脉虚弦为肝郁血虚之征。
+〔讲解〕本方主治血虚之体而兼肝郁脾虚，肝脾不和所致之胁痛证。因本方具疏肝解郁之效，使肝郁得解，脾虚得健，血虚得养，血虚得养，气血和畅，则肝郁脾虚之病愈，胁痛自除。故以“逍遥”命名。肝脾与气血密切相关，肝郁则气滞，乘脾则脾虚。脾为后天之本，气血生化之源，脾虚又可导致血虚。血虚肝易郁滞，由此可见，“肝郁血虚”、“血虚肝郁”可互为因果。肝胆相表里，其经布胸胁，病则经气不舒，肝郁则胁痛乳胀，头痛目眩，口燥咽干。肝脾不和，气滞血瘀，则月经不调。肝脾不和，脾失健运，则神疲食少。舌淡红、脉虚弦为肝郁血虚之征。
 
-本方系由四逆散衍生而成。方用当归、白芍养血柔肝，补肝体以制其横逆之性，白芍兼能滋液健脾，柴胡疏肝解郁,三药为君，以补肝体、和肝用，使肝气得疏，肝血得补，则气血调和，肝之疏泄正常，符合肝体阴用阳之旨。既健脾以资气血生化之源；又可防肝侮脾，即“见肝之病，当先实脾”之意。加少许薄荷、煨生姜为佐，取两药之辛既助柴胡疏泄条达，又能散郁热，还助苓，术以和中。炙甘草健脾胃，缓肝急，调和诸药以为使。全方具疏肝解郁，健脾养血之效。本方配伍，气血兼顾，肝脾并调，用药周到全面，故为临床调和肝脾常用方剂。
+本方系由四逆散衍生而成。方用当归、白芍养血柔肝，补肝体以制其横逆之性，白芍兼能滋液健脾，柴胡疏肝解郁，三药为君，以补肝体、和肝用，使肝气得疏，肝血得补，则气血调和，肝之疏泄正常，符合肝体阴用阳之旨。既健脾以资气血生化之源；又可防肝侮脾，即“见肝之病，当先实脾”之意。加少许薄荷、煨生姜为佐，取两药之辛既助柴胡疏泄条达，又能散郁热，还助苓、术以和中。炙甘草健脾胃，缓肝急，调和诸药以为使。全方具疏肝解郁，健脾养血之效。本方配伍，气血兼顾，肝脾并调，用药周到全面，故为临床调和肝脾常用方剂。
 
 本方是由四逆散去枳实，加苓、术、归、薄、姜等组成，两方均治肝气郁结，四逆散疏肝理脾，治偏实不虚，暴病宜此；逍遥散疏肝健脾、养血和营，治偏血虚脾弱，久病宜此，两方一实一虚，用各不同。
 
