update ok/fjx/fjx02-0.3.0.0.0.md. 邪阻气分,  ,改为， 再加大腹皮，苍术，谷芽  ，改为、 各五加减正气散。 “各”改为“名” 复习思考题 1到3点、改为.

--- a/ok/fjx/fjx02-0.3.0.0.0.md
+++ b/ok/fjx/fjx02-0.3.0.0.0.md
@@ -18,9 +18,9 @@
 
 本方保留藿香、茯苓（皮）、厚朴、广皮，再加杏仁、滑石，名三加减正气散。治秽湿着里，舌黄脘闷，气机不宣，郁久酿热证。有理气化湿，清利湿热之效。
 
-本方保留藿香、厚朴、广皮、茯苓，加草果、山楂、神粬、名四加减正气散。治秽湿着里，邪阻气分,舌红苔滑、脉右缓之证。有温中化湿导滞之效。
+本方保留藿香、厚朴、广皮、茯苓，加草果、山楂、神粬、名四加减正气散。治秽湿着里，邪阻气分，舌红苔滑、脉右缓之证。有温中化湿导滞之效。
 
-本方保留藿香、厚朴、广皮、茯苓、再加大腹皮，苍术，谷芽，各五加减正气散。治秽湿着里，脘闷便泄。有运脾行气燥湿之效。
+本方保留藿香、厚朴、广皮、茯苓、再加大腹皮、苍术、谷芽，名五加减正气散。治秽湿着里，脘闷便泄。有运脾行气燥湿之效。
 
 由上可见，处方用药，要药随证变，方随证裁。一、二、三加减正气散属苦辛寒法，为治湿热之方，而四、五加减正气散属苦辛温法，是治寒湿之方，每方各有特点。
 
@@ -32,8 +32,8 @@
 
 复习思考题
 
-1、小柴胡汤在组方上有何特点？并结合特点分析方义？
+1.小柴胡汤在组方上有何特点？并结合特点分析方义？
 
-2、逍遥散在组方上有何特点？并结合特点分析方义？
+2.逍遥散在组方上有何特点？并结合特点分析方义？
 
-3、小柴胡汤、逍遥散均以柴胡为君，其在用量上有何不同？为什么？
+3.小柴胡汤、逍遥散均以柴胡为君，其在用量上有何不同？为什么？
