--- a/ok/wk/wk07-0.6.0.0.0.md
+++ b/ok/wk/wk07-0.6.0.0.0.md
@@ -30,7 +30,7 @@
 
 （四）临证权变
 
-本病消散较难，又有一定的岩变可能，治疗中除内服药外，还可配合外用的温阳活血、化痰软坚的阳和解凝膏加黑退消贴敷，七天换一次。如果治疗I〜3个月效果不显著者，可行手术切除，以防恶变。本病切除后一般不复发，但在其它部位仍可发生，应根据病情调理。
+本病消散较难，又有一定的岩变可能，治疗中除内服药外，还可配合外用的温阳活血、化痰软坚的阳和解凝膏加黑退消贴敷，七天换一次。如果治疗1〜3个月效果不显著者，可行手术切除，以防恶变。本病切除后一般不复发，但在其它部位仍可发生，应根据病情调理。
 
 〔应用例案〕
 
