--- a/ok/bc/bc02-0.2.5.0.0.md
+++ b/ok/bc/bc02-0.2.5.0.0.md
@@ -1,6 +1,6 @@
 ### 蓖麻子
 
-〔原文〕**辛甘有毒。性善收，亦善走，能开通诸窍经络。治偏风不遂，㖞斜**捣饼左贴右，右贴左，即止。**口噤，鼻窒耳聋，**捣烂绵裹，塞耳塞鼻。**喉痹舌胀；**油作纸烧烟熏。**能利水气，治水癥浮肿；**研服，当下青黄水，壮人只可五粒。**能出有形滞物，治针刺入肉、**捣敷伤处，频看，刺出即去药，恐努出好肉。**竹木骨鲠**，蓖麻子一两，凝水石二两，研匀，以一捻置舌根，噙咽，自然不见。**胞胎不下**。蓖麻一粒，巴豆一粒，麝香一分，贴脐中并足心，胎下即去之。若子肠挺出者，捣膏涂顶心，即收。**能追脓拔毒，敷瘰疬恶疮，外用屡奏奇功。**鹈鹕油，能引药气入内；蓖麻油，能拔病气出外，故诸膏多用之。**然有热毒，气昧颇近巴豆，内服不可轻率。**去皮，黄连水浸，每晨用清水吞一粒至三四粒，治大风疥癞。**形如牛蜱，黄褐有斑。盐水煮，去皮研，或用油。忌铁。**食蓖麻，一生不得食炒豆，犯之胀死。
+〔原文〕**辛甘有毒。性善收，亦善走，能开通诸窍经络。治偏风不遂，㖞斜**<small>捣饼左贴右，右贴左，即止。</small>**口噤，鼻窒耳聋，**<small>捣烂绵裹，塞耳塞鼻。</small>**喉痹舌胀；**<small>油作纸烧烟熏。</small>**能利水气，治水癥浮肿；**<small>研服，当下青黄水，壮人只可五粒。</small>**能出有形滞物，治针刺入肉，**<small>捣敷伤处，频看，刺出即去药，恐努出好肉。</small>**竹木骨鲠，**<small>蓖麻子一两，凝水石二两，研匀，以一捻置舌根，噙咽，自然不见。</small>**胞胎不下。**<small>蓖麻一粒，巴豆一粒，麝香一分，贴脐中并足心，胎下即去之。若子肠挺出者，捣膏涂顶心，即收。</small>**能追脓拔毒，敷瘰疬恶疮，外用屡奏奇功。**<small>鹈鹕油，能引药气入内；蓖麻油，能拔病气出外，故诸膏多用之。</small>**然有热毒，气昧颇近巴豆，内服不可轻率。**<small>去皮，黄连水浸，每晨用清水吞一粒至三四粒，治大风疥癞。</small>**形如牛蜱，黄褐有斑。盐水煮，去皮研，或用油。忌铁。**<small>食蓖麻，一生不得食炒豆，犯之胀死。</small>
 
 【讲解】**蓖麻子为消肿拔毒，泻下通滞之品。**为大戟科一年生单本植物蓖麻的种子。外种皮平滑，有充泽，显淡红棕色相间的斑纹，气微弱，味油腻性。敲碎种子外壳，拣取种仁用。
 
