--- a/ok/wk/wk04.md
+++ b/ok/wk/wk04.md
@@ -71,7 +71,7 @@
 | 里证     | 里寒     | 恶寒、肢冷、口不渴、喜热饮、恶心、呕吐<br />腹痛、腹泻、便溏、尿清长、面色白 | 舌质淡 苔薄白 | 沉迟   |
 | 里证     | 里热     | 发热、烦躁、口渴、喜冷饮、眼红、咽痛<br />便燥、尿黄赤、面色红 | 舌质红        | 沉洪数 |
 
-此外，古人总结出很多辨别疮疡浅深之法，多为经验之淡。如若人虽患疮疡，但起居平和，饮食如故，疮高而软者,是发于肌表，若初生疮之时，壮热恶寒，拘急头痛，精神不宁，烦躁冷饮，局部皮色不变，不肿隐痛者，是发于骨骼。这些对于辨别疮疡的部位、性质至关重要。
+此外，古人总结出很多辨别疮疡浅深之法，多为经验之淡。如若人虽患疮疡，但起居平和，饮食如故，疮高而软者，是发于肌表，若初生疮之时，壮热恶寒，拘急头痛，精神不宁，烦躁冷饮，局部皮色不变，不肿隐痛者，是发于骨骼。这些对于辨别疮疡的部位、性质至关重要。
 
 ## 第二节 脏腑辨证
 
