--- a/ok/wk/wk07-0.9.0.0.0.md
+++ b/ok/wk/wk07-0.9.0.0.0.md
@@ -28,7 +28,7 @@
 
 如毒邪未尽者，可佐以清热解毒，合用五味消毒饮；硬结不消者，加玄参、夏枯草、连翘。如果条件许可者先断乳，再治漏效果更好。断乳可用生麦芽30克、焦山楂30克，水煎服。
 
-若因乳痨破溃成漏，疮口多凹陷，周围皮色紫暗、脓水清稀或夹有豆腐渣样物质，伴有潮热、颧红、盗汗、乏力、舌质红、脉细数等症。证属阴虚火旺，余毒不尽。治以养阴清热法，用六味地黄汤合青蒿鳖甲扬加减。
+若因乳痨破溃成漏，疮口多凹陷，周围皮色紫暗、脓水清稀或夹有豆腐渣样物质，伴有潮热、颧红、盗汗、乏力、舌质红、脉细数等症。证属阴虚火旺，余毒不尽。治以养阴清热法，用六味地黄汤合青蒿鳖甲汤加减。
 
 2.乳晕部漏：多发于非哺乳期的20〜40岁妇女，亦可偶见于男子，往往有乳头内缩，并在乳晕部有黄豆大小结块，质软不坚，不痛不痒，患者也不易发现。发作时结块增大，肿痛交作，皮色微红，7〜10天成脓，溃流臭脓，兼有灰白色脂状物质，往往久不收口。亦有敛后在乳窍中仍有粉质外溢，如不施行手术摘除，容易复发。若用球头银丝从疮孔中检查，银丝球头可从乳窍穿出。此证一般无全身症状，可不用内服药。
 
