--- a/ok/wk/wk07-0.10.0.0.0.md
+++ b/ok/wk/wk07-0.10.0.0.0.md
@@ -12,7 +12,7 @@
 
 本病诊断重点在于问诊。主症是不在月经期自一侧或两侧乳头溢出血色（或黄色）液体。要辨其属肝属脾主要依据全身症状和舌苔脉象。其次应与乳腺增生病和乳岩鉴别：
 
-乳腺增生病：在双侧乳房内可触及大小不一，形态不规则，质地柔韧的肿物，胀痛；症状随喜怒而消长，与月经确一定关系。
+乳腺增生病：在双侧乳房内可触及大小不一，形态不规则，质地柔韧的肿物，胀痛；症状随喜怒而消长，与月经有一定关系。
 
 乳岩：在乳房内可触及肿物，坚硬如石，高低不平，推之不移，后期破溃，疼痛剧烈。
 
@@ -58,7 +58,7 @@
 
 〔文献摘录〕
 
-《疡医大全》：“妇女乳房并不坚肿结核，惟乳窍常流鲜血，此名衄。其认为病因是“忧思过度，肝脾受伤，肝不藏血，脾不统血，肝火亢盛，血失统藏，所以成衄也”。其治则为“平肝散郁，养血扶脾”。
+《疡医大全》：“妇女乳房并不坚肿结核，惟乳窍常流鲜血，此名乳衄。其认为病因是“忧思过度，肝脾受伤，肝不藏血，脾不统血，肝火亢盛，血失统藏，所以成衄也”。其治则为“平肝散郁，养血扶脾”。
 
 复习思考题
 
