--- a/ok/bc/bc20.md
+++ b/ok/bc/bc20.md
@@ -14,7 +14,7 @@
 
 3.掌握外用药中常用药（雄黄  轻粉  明矾  木鳖  斑蝥  蟾酥  蛇床子）的功效、临证应用，并比较其异同。
 
-4.熟悉杀虫止庠、解毒、蚀疮去腐、拔毒生肌、收湿敛疮、外用发泡等概念。
+4.熟悉杀虫止痒、解毒、蚀疮去腐、拔毒生肌、收湿敛疮、外用发泡等概念。
 
 5.了解使用剧毒药必须做到注意用法（包括炮制）、严格控制剂量、谨慎用药，千万不可粗心大
 意。
