--- a/ok/bc/bc20-0.5.0.0.0.md
+++ b/ok/bc/bc20-0.5.0.0.0.md
@@ -6,6 +6,6 @@
 
 本品辛寒，燥烈有毒。外用可杀虫攻毒，内服逐水通便。用治疥癣、梅毒、疮疡痈疽等证，也可用于水肿，大小便不利的实证。
 
-【临证应用】轻粉治皮肤疥癣，可配吴茱萸、硫黄等研末，油调涂，如神捷散。治梅毒，以之配大风子肉，等分为末外涂。治疮疡溃烂，常用的生肌玉红膏，即以本品配血竭、当归、紫草、白蜡、麻油等制成膏药，贴患处用。对于水肿臌胀、二便不利之证，以轻粉配大黄、牵牛、廿遂、大戟、芫花等内服，如舟车丸。
+【临证应用】轻粉治皮肤疥癣，可配吴茱萸、硫黄等研末，油调涂，如神捷散。治梅毒，以之配大风子肉，等分为末外涂。治疮疡溃烂，常用的生肌玉红膏，即以本品配血竭、当归、紫草、白蜡、麻油等制成膏药，贴患处用。对于水肿臌胀、二便不利之证，以轻粉配大黄、牵牛、甘遂、大戟、芫花等内服，如舟车丸。
 
 【用量用法】内服0.1一0.2克，入丸散。外用适量，研末调涂或干撒。本品毒性强烈，内服不可过量，也不能持续服用，以防中毒。服散剂宜装胶囊中，服后要及时漱口，以免口腔糜烂。孕妇忌用。
