--- a/ok/bc/bc20-0.6.0.0.0.md
+++ b/ok/bc/bc20-0.6.0.0.0.md
@@ -11,7 +11,7 @@
 
 铅丹：又名黄丹。为铅的氧化物。原药用或炒用。
 
-本品辛，微寒。人心、肝经。外用有良好解毒防腐、止痒、收敛生肌等效。
+本品辛，微寒。入心、肝经。外用有良好解毒防腐、止痒、收敛生肌等效。
 
 铅粉：又名官粉、胡粉、锡粉。
 
@@ -21,7 +21,7 @@
 
 内服能截疟，多配入复方，如《肘后方》与常山配伍，研末，蜜丸服；《仁存方》与青蒿共研制散剂服，均有较好疗效。
 
-此外，古时亦作镇惊和降逆坠痰之剂内服以治惊痫癫狂等证。因本品有毒，近世已少有用者。
+此外，古时亦作镇惊和降逆坠痰之剂，内服以治惊痫癫狂等证。因本品有毒，近世已少有用者。
 
 铅粉临床外用能敛疮止痒、解毒防腐，功用与铅丹相似，多用于疥癣疮疡、多脓、湿痒诸证，常与枯矾、轻粉等合用。亦为制膏药的基础剂，与植物油化合可制成膏药。
 
