--- a/ok/bc/bc20-0.13.0.0.0.md
+++ b/ok/bc/bc20-0.13.0.0.0.md
@@ -1,6 +1,6 @@
 ## 蟾蜍
 
-**〔原文〕蟾土精而应月魄，辛凉微毒，入阳明胃。发汗退热，除湿杀虫。治疮疽发背，**<small>未成者，用活蟾蜍系疮上，半日，蟾必昏愤，置水中救其命，再易一个，三易则毒散矣；势重者，剖蟾蜍合疮上，不久必臭不可闻。如此二三易，其肿自愈。</small>**小儿劳瘦疳疾。**
+**〔原文〕蟾土精而应月魄，辛凉微毒，入阳明胃。发汗退热，除湿杀虫。治疮疽发背，**<small>未成者，用活蟾蜍系疮上，半日，蟾必昏愦，置水中救其命，再易一个，三易则毒散矣；势重者，剖蟾蜍合疮上，不久必臭不可闻。如此二三易，其肿自愈。</small>**小儿劳瘦疳疾。**
 
 **蟾酥，辛温大毒，助阳气。治疔肿发背，小儿疳疾脑疳。**<small>即蟾蜍眉间白汁，能烂人肌肉，惟疔疳或合他药服一二厘，取其以毒攻毒。脑疳乳和滴鼻中，外科多用之。蟾蜍肪涂玉，刻之如蜡。肪音方，脂也。</small>
 
