--- a/ok/bc/bc20-0.22.0.0.0.md
+++ b/ok/bc/bc20-0.22.0.0.0.md
@@ -8,4 +8,4 @@
 
 【临证应用】阿魏配伍白芥子，鳖甲、三棱、莪术等为丸内服，可治一切痞块癥瘕；又可制成膏药外敷。本品又有消肉积的作用，可配六神曲，山楂等以冶肉食所伤的食积停滞。
 
-【用量用法】内服1一1.5克，入丸散。外用适量，可熬制药膏或研末入膏药内贴。本品气味奇臭，不宜人汤剂。
+【用量用法】内服1一1.5克，入丸散。外用适量，可熬制药膏或研末入膏药内贴。本品气味奇臭，不宜入汤剂。
