update ok/wk/wk08-0.2.0.0.0.md. 原文"海浮石1000克."改为海浮石1000克,

--- a/ok/wk/wk08-0.2.0.0.0.md
+++ b/ok/wk/wk08-0.2.0.0.0.md
@@ -40,7 +40,7 @@
 
 〔应用例案〕
 
-张XX，男，41岁，南京市干部。患者经本市某医院确诊为“单纯性结节性甲状腺肿”已三年。经中西药治疗无显效，于1973年6月7日来我处就诊，当时患者颈部变粗，病侧甲状腺明显肿大，相当于患者半个拳头大，触之质软无压痛，有多个结节。患者平素性情急躁易怒，经常胸闷口苦，舌苔黄腻，脉弦滑。证属肝郁气滞，津液不得运行，凝结成痰，气滞日久，导致血瘀，气痰互结于颈前，渐成瘿肿。治以化痰软坚为主，佐以理气化瘀。方以消瘿丸化裁主之。海藻1000克，海帯500克，海浮石1000克.青陈皮各15克，青木香15克，醋三棱60克，醋莪术60克，共研极细末，炼蜜为丸；每日二次，每次5克。服完一料后，肿大之甲状腺已明显缩小。原方继服第二料，服之一半时，甲状腺肿大已完全消失，外观及颈部触诊无任何异常，后停药恢复工作，随访观察七年多，一直未复发。（江苏 谢英彪治验）
+张XX，男，41岁，南京市干部。患者经本市某医院确诊为“单纯性结节性甲状腺肿”已三年。经中西药治疗无显效，于1973年6月7日来我处就诊，当时患者颈部变粗，病侧甲状腺明显肿大，相当于患者半个拳头大，触之质软无压痛，有多个结节。患者平素性情急躁易怒，经常胸闷口苦，舌苔黄腻，脉弦滑。证属肝郁气滞，津液不得运行，凝结成痰，气滞日久，导致血瘀，气痰互结于颈前，渐成瘿肿。治以化痰软坚为主，佐以理气化瘀。方以消瘿丸化裁主之。海藻1000克，海帯500克，海浮石1000克，青陈皮各15克，青木香15克，醋三棱60克，醋莪术60克，共研极细末，炼蜜为丸；每日二次，每次5克。服完一料后，肿大之甲状腺已明显缩小。原方继服第二料，服之一半时，甲状腺肿大已完全消失，外观及颈部触诊无任何异常，后停药恢复工作，随访观察七年多，一直未复发。（江苏 谢英彪治验）
 
 按：本病发病缓慢，病程浸长。治疗亦宜缓取，坚持治疗，故以消瘿丸药治之甚宜。
 
