update ok/wk/wk08-0.3.0.0.0.md. 原文“阴虚肝旺证，”改为阴虚肝旺证：

--- a/ok/wk/wk08-0.3.0.0.0.md
+++ b/ok/wk/wk08-0.3.0.0.0.md
@@ -26,7 +26,7 @@
 
 局部质硬者，加元参、生牡蛎、丹参、炮甲珠；胸闷憋胀者，加桔梗、川贝母。
 
-阴虚肝旺证，头晕目眩，情绪激动，心烦易怒，面赤形瘦，畏热多汗，心悸易惊，夜寐不宁，善饥多食，瘿肿口苦，双眼突出，手指震颤，全身乏力，舌质红，苔少，脉细数。证属阴液亏损，肝阳上亢。
+阴虚肝旺证：头晕目眩，情绪激动，心烦易怒，面赤形瘦，畏热多汗，心悸易惊，夜寐不宁，善饥多食，瘿肿口苦，双眼突出，手指震颤，全身乏力，舌质红，苔少，脉细数。证属阴液亏损，肝阳上亢。
 
 治法：育阴平肝，养心宁神。
 
