--- a/ok/gl/gl00.1-0.1.0.0.0.md
+++ b/ok/gl/gl00.1-0.1.0.0.0.md
@@ -10,7 +10,7 @@
 
 两汉时期，中医学有了显著的进步和发展。代表这一时期医学发展水平的是东汉末年著名医家张仲景 （公元150~219？）的《伤寒杂病论》。《伤寒杂病论》是张仲景运用《内经》、《难经》所阐述的基本理论于临床实际的经验总结，是中医临床学的奠基之作。《伤寒杂病论》即后世之《伤寒论》和《金匮要略》。《伤寒论》和《金匮要略》所确立的六经证治、脏腑证治，开中医学辨证论治的先河，并使汉以前中医学的发展达到了新的高度。张仲景所确立的外感疾病的六经证治，内伤杂病的脏腑证治，基本上形成了中医临床医学的辩证论治的理论体系，为后世临床医学的发展奠定了基础。
 
-汉以后的医家在《内经》、《伤寒杂病论》的基础上，从不同的方面发展了祖国医学。晋●王叔和《脉经》关于脉诊的论述，是对中医诊断学的重要发展。晋●皇甫谧的《针灸甲乙经》，基本确立了针灸医学的理论和临床体系。隋●巢元方等的《诸病源候论》是中医学第一部关于病因病机及证候学的专书。宋●陈无择的《三因极一病证方论》，发展了《内经》的病因学说，明确提出“内因”、“外因”、“不内外因”的“三因”致病说。宋●钱乙的《小儿药证直诀》，发展了脏腑证治学说。金元时期的百家争鸣、流派纷争的活跃局面，有力地促进了中医学的发展，先后出现了以刘完素、张从正、李杲、朱震亨为代表的著名医家，即“金元四大家”。刘完素以火热立论，倡“六气皆从火化”、“五志过极 皆能生火” 之说，用药以寒凉为主，后世称为“寒凉派”。他的学术观点给后世温病学说的形成和发展以很大启示。张从正认为病由邪生，“邪去则正安”，主张以攻邪为主，倡汗、吐、下三法，后世称为“攻下派”。李杲认为“内伤脾胃，百病由生”，故治疗以补益脾胃为主，后世称为“补土派”。朱震享倡“相火论”，认为人体“阳常有余，阴常不足”，治疗以滋阴降火为主，后世称为“养阴派”。总之，刘、张、李、朱四大家，都从不同方面丰富和发展了中医学。明代赵献可、张景岳发展了命门学说，为脏象学说增添了新的内容。
+汉以后的医家在《内经》、《伤寒杂病论》的基础上，从不同的方面发展了祖国医学。晋●王叔和《脉经》关于脉诊的论述，是对中医诊断学的重要发展。晋●皇甫谧的《针灸甲乙经》，基本确立了针灸医学的理论和临床体系。隋●巢元方等的《诸病源候论》是中医学第一部关于病因病机及证候学的专书。宋●陈无择的《三因极一病证方论》，发展了《内经》的病因学说，明确提出“内因”、“外因”、“不内外因”的“三因”致病说。宋●钱乙的《小儿药证直诀》，发展了脏腑证治学说。金元时期的百家争鸣、流派纷争的活跃局面，有力地促进了中医学的发展，先后出现了以刘完素、张从正、李杲、朱震亨为代表的著名医家，即“金元四大家”。刘完素以火热立论，倡“六气皆从火化”、“五志过极 皆能生火” 之说，用药以寒凉为主，后世称为“寒凉派”。他的学术观点给后世温病学说的形成和发展以很大启示。张从正认为病由邪生，“邪去则正安”，主张以攻邪为主，倡汗、吐、下三法，后世称为“攻下派”。李杲认为“内伤脾胃，百病由生”，故治疗以补益脾胃为主，后世称为“补土派”。朱震亨倡“相火论”，认为人体“阳常有余，阴常不足”，治疗以滋阴降火为主，后世称为“养阴派”。总之，刘、张、李、朱四大家，都从不同方面丰富和发展了中医学。明代赵献可、张景岳发展了命门学说，为脏象学说增添了新的内容。
 
 明清时期中医学的突出发展是温病学说的形成。温病学是研究四时温病发生、发展规律，及其诊治方法的一门临床学科。温病学理论源于《内经》、《难经》、《伤寒杂病论》等书，经过汉以后历代医家的发展，至清代温病学家叶天士、吴鞠通，逐步形成一门具有完整理论体系的独立学科。明●吴又可对温疫病原，提出 “非风非寒、非暑非湿，乃天地间别有一种异气所感”。吴又可称这种“异气”为“戾气”或“杂气”，并指出其受邪途径不是从肌表而入，是从口鼻而入。这对温病（特别是温疫）的病因学是一个重大发展。至清代温病学的理论和临床日趋完善，叶天士、吴鞠通等温病学家，创立了以卫气营血和三焦为中心的温病辨证论治体系。
 
