update ok/wk/wk02.md. 1.原文有“或者脏腑失调，内病外传”，应为“或者脏腑失调，内疾外传”，电子版已改。

--- a/ok/wk/wk02.md
+++ b/ok/wk/wk02.md
@@ -176,7 +176,7 @@
 
 疾病的发生发展转归的过程，是邪正交争的过程。外科疾病虽然多发生于体表，但它的发生发展和转归也与脏腑、气血、经络密切相关。
 
-外科病发生与否，与正气的盛衰有密切关系。一般来说，阴平阳秘，脏腑功能正常，气血充盛，阳气卫外功能固密，即使外感六淫，或内伤七情也不一定发病。反之，则易于发病。正如《内经》所说：“正气存内，邪不可干。”《外科启玄》也说：“凡疮疡皆由五脏不和，六腑壅滞，则令经脉不通而生焉。”此即“有诸内而必形诸外”的道理。
+外科病发生与否，与正气的盛衰有密切关系。一般来说，阴平阳秘，脏腑功能正常，气血充盛，阳气卫外功能固密，即使外感六淫，或内伤七情也不一定发病。反之，则易于发病。正如《内经》所说：“正气存内，邪不可干”。《外科启玄》也说：“凡疮疡皆由五脏不和，六腑壅滞，则令经脉不通而生焉”。此即“有诸内而必形诸外”的道理。
 
 外科病的发展和传变也与正气密切相关。一般规律是气虚者患疮疡，难于发起破溃；血虚者患疮疡，难于生肌收口。气血充足者患疮疡，易于发起破溃，生肌长肉，愈合迅速，多为顺证。脏腑功能失调，气血不足者患疮疡，往往由于毒邪鸱张，侵入营血，内攻脏腑，扰乱神明，引动内风，出现谵语抽搐等一系列危重证候，成为“走黄”、“内陷”等证。另外，气血虚弱者患卒腹痛时，变症多、危症多、合并症多。而气血渐充，正气来复者，则能加速疾病康复。
 
@@ -184,7 +184,7 @@
 
 综上所述，可见外科疾病的发生发展和转归，都是由脏腑、气血和外邪斗争的情况决定的。
 
-由于经络内源脏腑，外络体表，具有运行气血、联络人体各个组织的作用。所以，疮疡由外传里，内攻脏腑；或者脏腑失调，内病外传，外达体表，发为疮疡。这些都是通过经络传导而实现的，所以，经络在疾病的发生、传变过程中起着重要作用。
+由于经络内源脏腑，外络体表，具有运行气血、联络人体各个组织的作用。所以，疮疡由外传里，内攻脏腑；或者脏腑失调，内疾外传，外达体表，发为疮疡。这些都是通过经络传导而实现的，所以，经络在疾病的发生、传变过程中起着重要作用。
 
 ### 三、疾病中的抗邪反应与病理改变
 
