update ok/wk/wk08-0.5.0.0.0.md. 原文“活血软竖取效”改为“活血软坚取效”

--- a/ok/wk/wk08-0.5.0.0.0.md
+++ b/ok/wk/wk08-0.5.0.0.0.md
@@ -50,7 +50,7 @@
 
 检查患者左前颈部，有一3.5X2.5X2厘米肿块，触之坚硬,高低不平，压痛不著，皮色无异，移动度小。自感食欲不振，精神稍差。脉缓，舌红，苔薄白。辨证为肝脾气机失调，气滞血瘀,加之痰湿內生，痰瘀凝于颈部，结成石瘿。治宜解郁化痰，活血软坚。处方：海藻、茯苓各12克、昆布、牡蛎、贝母、莪术、赤芍、当归尾、青皮、陈皮、柴胡、川芎各9克、黄药子、桂枝各6克，水煎服，每日一剂。服至16剂时，黄药子増至12克。服第20剂后，颈前肿块开始缩小（2.0X1.5X1.5厘米），质稍软，食欲增进，体重増加2公斤。上方加丹参15克、三棱9克、炒鳖甲18克，去陈皮。上方连服48剂，肿块更为缩小，活动度增大，精神明显好转。再宗上方，另加夏枯草12克、白花蛇舌草20克，去牡蛎、茯苓。上方共服65剂，颈前肿块已缩小至蚕豆大，精神、食欲如常，脉沉缓，较前有力，舌红苔薄白。以上方增损又服80剂，共服药200余剂，颈前肿块全部消退。停药观察近一年，一切正常。（陕西杜雨茂治验）
 
-按：本病例依中医理论诊为石瘿，治疗中先以解郁化痰，活血软竖取效，继而加强破瘀、散结、解毒，全过程理法方药丝丝入扣。所以疗效日显，终获全愈。
+按：本病例依中医理论诊为石瘿，治疗中先以解郁化痰，活血软坚取效，继而加强破瘀、散结、解毒，全过程理法方药丝丝入扣。所以疗效日显，终获全愈。
 
 〔文献摘录〕
 
