第四章 第三节 原文有“多由毒邪识盛 ”，应为“多由毒邪炽盛 ”，电子版已改。 原文有“剧烈难忍厂多由气血阻滞或腑气不通所致 ”，应为“剧烈难忍，多由气血阻滞或腑气不通所致 ”，电子版已改。 原文有“却不知疼痛或麻木本痛 ”，应为“却不知疼痛或麻木不痛 ”，电子版已改。 原文有“甚则滋水淋漓，麋烂结痂 ”，应为“甚则滋水淋漓，糜烂结痂 ”，电子版已改。 原文有“腋的性质应从脓液的稠稀 ”，应为“脓的性质应从脓液的稠稀 ”，电子版已改。

--- a/ok/wk/wk04.md
+++ b/ok/wk/wk04.md
@@ -179,9 +179,9 @@
 
 痠痛：又痠又痛，多由寒邪所致，病变多在关节间，如流痰、系统性红斑狼疮的关节痛。
 
-抽掣痛：痛时有抽掣感，并伴有放射痛，传导于临近部位，多由毒邪识盛，攻窜不止所致，如乳岩、失荣等晚期之疼痛。
+抽掣痛：痛时有抽掣感，并伴有放射痛，传导于临近部位，多由毒邪炽盛，攻窜不止所致，如乳岩、失荣等晚期之疼痛。
 
-绞痛：痛如绞紧，剧烈难忍厂多由气血阻滞或腑气不通所致。如胆石症、泌尿系结石伴有梗阻时。
+绞痛：痛如绞紧，剧烈难忍，多由气血阻滞或腑气不通所致。如胆石症、泌尿系结石伴有梗阻时。
 
 啄痛：痛如鸡啄，并伴有节律性痛，多由热盛肉腐所致，病变多在肌肉，多在阳证疮疡化脓阶段，如手部疔疮、乳痈等成脓期之疼痛。
 
@@ -189,7 +189,7 @@
 
 卒腹痛中之腹痛亦有特点，首先从疼痛部位来看，最先疼痛和疼痛最剧烈的部位，一般多是病变所在部位，但要注意肠痈有转移性腹痛的特点，以及少数腹腔外脏器疾病，有反射引起腹痛的可能，其次不同性质的疾病，能引起不同特点的腹痛，故深入了解腹痛的性质，常可诊断出疾病的性质。如突然发作，刀割火灼样疼痛，迅速波及全腹，多为空腔器官穿孔；阵发样钻顶样疼痛，则多是胆道、胰管或阑尾蛔虫症的特点；持续性胀痛，则可能是肠结，及实质性脏器肿胀所致；阵发性绞痛，向右肩背部放射者，可能为胆石症，向会阴部放射者，可能为石淋证。
 
-总之，疼痛在外科疾病中是很重要的症状，它既是气血凝滞、不通的病理结果，又是正气抗邪的反应；既是疾病的信号，又是帮助医者诊断疾病的重要依据。一般来说，外科病以知痛为顺，多为易治之证；如病长日久，却不知疼痛或麻木本痛，多为重证阴证。对痛的辨别，不仅要逋过问诊，还要运用望诊、触诊，反复探求，去假存真，要将痛的性质、部位辨别清楚，才能准确辨证。卒腹痛在确诊之前，禁用止痛剂，以免贻误病情。
+总之，疼痛在外科疾病中是很重要的症状，它既是气血凝滞、不通的病理结果，又是正气抗邪的反应；既是疾病的信号，又是帮助医者诊断疾病的重要依据。一般来说，外科病以知痛为顺，多为易治之证；如病长日久，却不知疼痛或麻木不痛，多为重证阴证。对痛的辨别，不仅要逋过问诊，还要运用望诊、触诊，反复探求，去假存真，要将痛的性质、部位辨别清楚，才能准确辨证。卒腹痛在确诊之前，禁用止痛剂，以免贻误病情。
 
 （三）辨痒
 
@@ -197,7 +197,7 @@
 
 湿胜作痒：浸淫四窜，黄水淋漓，易沿表皮蚀烂，越腐越痒，或有传染。
 
-热胜作痒：局部斑疹，焮红灼热而作痒，或痒痛并作，轻者发于暴露部位，重者遍布全身，甚则滋水淋漓，麋烂结痂。
+热胜作痒：局部斑疹，焮红灼热而作痒，或痒痛并作，轻者发于暴露部位，重者遍布全身，甚则滋水淋漓，糜烂结痂。
 
 虫淫作痒：浸淫漫延，黄水频流，状如虫行皮中，搔痒剧烈，最易传染。皮损多见丘疹、水庖。
 
@@ -223,7 +223,7 @@
 
 至于内痈之脓诊断更困难，古人有以脉辨脓的经验。一般说疮疡脉浮数者，无脓，可消散；紧数之脉，脓虽未成，但毒气已结，势非化脓不可；脉紧缓解但数者，为脓已成。若见洪数之脉，脓必大成。
 
-腋的性质应从脓液的稠稀、色泽、气味等项及其变化分辨之：
+脓的性质应从脓液的稠稀、色泽、气味等项及其变化分辨之：
 
 脓液黄白稠厚，色泽鲜明，略带腥味者，为元气较充、气血充实之顺证。如溃后先出黄白稠脓，次为桃花脓，而且脓量渐减（脓渐尽），为疮渐敛的佳象。
 
