--- a/ok/wk/wk11-0.1.0.0.0.md
+++ b/ok/wk/wk11-0.1.0.0.0.md
@@ -46,11 +46,11 @@
 
 1.大蒜30克，芒硝30克，共捣成糊状，在右下腹衬一层凡士林油纱布后，敷上大蒜芒硝糊，2小时后取下，改敷金黄膏或玉露膏，每日换一次。适用于各期阑尾炎（注意：大蒜芒硝糊能引起皮肤发红，甚至起水泡）。
 
-2.皮硝60克，外敷肿块处，一日一换，适用于阔尾周围脓肿。或外敷消结膏。
+2.皮硝60克，外敷肿块处，一日一换，适用于阑尾周围脓肿。或外敷消结膏。
 
 （五）临证权变
 
-肠痈变化多端，初期或有较轻腹痛，身无寒热或微热，大便微溏，小便清长，脉迟紧或濡数，病情发展较为缓慢，或有反复发作的慢性肠痈，此为寒湿挟瘀血凝结致，宜疏化导滞，理气行瘀，用藿香正气散合薏苡附子败酱散。溃脓期或兼有精神萎顿，肢冷自汗，身微温或体温反为降低，舌质淡苔白，脉沉迟等，此为阴损及阳。治宜温阳健脾，托毒排脓为主，用薏苡附子败酱散合参附汤。
+肠痈变化多端，初期或有较轻腹痛，身无寒热或微热，大便微溏，小便清长，脉迟紧或濡数，病情发展较为缓慢，或有反复发作的慢性肠痈，此为寒湿挟瘀血凝结所致，宜疏化导滞，理气行瘀，用藿香正气散合薏苡附子败酱散。溃脓期或兼有精神萎顿，肢冷自汗，身微温或体温反为降低，舌质淡苔白，脉沉迟等，此为阴损及阳。治宜温阳健脾，托毒排脓为主，用薏苡附子败酱散合参附汤。
 
 〔调护〕
 
