--- a/ok/bc/bc08-0.0.7.0.0.md
+++ b/ok/bc/bc08-0.0.7.0.0.md
@@ -11,7 +11,7 @@
 | 麝香   | 辛、温       | 心、脾     | 开窍醒神，活血散结，止痛、催产 | ①窍闭神昏②疮肿疼痛③跌打损伤及痹证肿痛                        | 0.1-0.15克 入丸散剂，不入汤剂，外用适量 | 孕妇忌用 |
 | 牛黄   | 苦、凉       | 心、肝     | 开窍豁痰，息风止痉，清热解毒   | ①痰迷心窍，神昏谵语②肝热生风，惊风抽搐③热毒疮疡、咽喉肿烂、牙疳口疮 | 0.2-0.5克 多入丸、散，不入煎剂          |          |
 | 冰片   | 辛、苦、微寒 | 心、脾、肺 | 开窍醒神，清热止痛，防腐止痒   | ①神昏惊厥②各种疮疡、咽喉肿痛、口疮、目疾                     | 0.03-0.1克 入丸、散，不入煎剂。外用适量 | 孕妇慎用 |
-| 苏合香 | 辛、温       | 心、脾     | 开窍辟秽，宁神，开郁化浊       | ①中风寒厥等寒闭证②冠心病心绞痛                               | 0.3-1克入丸剂，不宜入煎剂               |          |
+| 苏合香 | 辛、温       | 心、脾     | 开窍辟秽，宁神，开郁化浊       | ①中风痰厥等寒闭证②冠心病心绞痛                               | 0.3-1克入丸剂，不宜入煎剂               |          |
 | 石菖蒲 | 辛、温       | 心、胃     | 开窍宁神，化湿豁痰，醒脾开胃   | ①痰湿蒙闭清窍的神昏、癫痫、健忘、耳鸣②脘腹胀闷疼痛           | 0.3-1克                                 |          |
 | 安息香 | 辛、苦、平   | 心、脾     | 开窍祛痰，行气活血             | 中风痰厥                                                     | 5-8克                                   |          |
 
