第四章 第四、五节 原文有“凡疮瘙在发生发展过程中能依序出现应有的症状 ”，应为“凡疮疡在发生发展过程中能依序出现应有的症状 ”，电子版已改。

--- a/ok/wk/wk04.md
+++ b/ok/wk/wk04.md
@@ -275,7 +275,7 @@
 
 （二）辨顺逆
 
-辨顺逆，是通过疮疡局部症状的辨别，判断疮疡预后的好坏。凡疮瘙在发生发展过程中能依序出现应有的症状，就叫顺证；反之，凡不依序变化而出现不良症状的就叫逆证。顺证，预后多好，逆证预后较差。当然，这些局部之顺逆，必须与全身症状之善恶，综合分析。
+辨顺逆，是通过疮疡局部症状的辨别，判断疮疡预后的好坏。凡疮疡在发生发展过程中能依序出现应有的症状，就叫顺证；反之，凡不依序变化而出现不良症状的就叫逆证。顺证，预后多好，逆证预后较差。当然，这些局部之顺逆，必须与全身症状之善恶，综合分析。
 
 1.顺证：
 
@@ -305,7 +305,7 @@
 
 依据疾病所在部位和经络在人体的循行分布，可以推求疾病所属何经，从而可按经用药。现仅就在外科上常见者，举例说明如下：
 
-疮疡生于面部和乳部，如面部疔疮、乳痈、乳疬等属足阳明胃经（乳房属足阳明胃经，乳头属足厥阴肝经）。
+疮疡生于面部和乳部：如面部疔疮、乳痈、乳疬等属足阳明胃经（乳房属足阳明胃经，乳头属足厥阴肝经）。
 
 生于颈部两侧：如颈痈、瘰疬等多属少阳胆经。
 
@@ -315,7 +315,7 @@
 
 生于臂部：外侧属手三阳经，内侧属手三阴经。
 
-生于腿部：外侧属足三阳经，内侧属足三阴经.
+生于腿部：外侧属足三阳经，内侧属足三阴经。
 
 生于胸胁部：如急性胆囊炎、化脓性胆管炎、缠腰火丹等属足厥阴肝经，足少阳胆经。
 
