--- a/ok/bc/bc02-0.3.1.0.0.md
+++ b/ok/bc/bc02-0.3.1.0.0.md
@@ -14,4 +14,4 @@
 
 甘遂生用泻下力强，毒性也大，只可外用。经醋制后，毒性和泻下作用都相应减少，方可内服。因其有效成分不溶于水，宜入丸、散剂，不作煎剂。本药反甘草。
 
-【用量用法】0.5—1克，入丸散剂，不作煎剂。《备要》言面裹煨熟用，传统有用面皮包裹，置火中煨至面皮焦黑为度的制法，借以减缓毒性。现多加麦麸同炒至焦黄色，去麸切片入药，称煨甘遂，但仍以醋拌炒为常用。外用适量》。
+【用量用法】0.5—1克，入丸散剂，不作煎剂。《备要》言面裹煨熟用，传统有用面皮包裹，置火中煨至面皮焦黑为度的制法，借以减缓毒性。现多加麦麸同炒至焦黄色，去麸切片入药，称煨甘遂，但仍以醋拌炒为常用。外用适量。
