--- a/ok/ya/ya02-0.24.0.0.0.md
+++ b/ok/ya/ya02-0.24.0.0.0.md
@@ -1,6 +1,6 @@
 ## 2.24张子和治飧泄案
 
-赵明之来谷不消，腹作雷鸣，自五月至六月不愈，诸医以为脾受大寒，故并与圣散子①、豆蔻丸②，虽止一二日，药力尽而复作。诸医不知药之非，反责明之不忌口。戴人至而笑曰：春伤于风，夏必飧泄，飧泄者，米谷不化，而直过下出也。又曰：米谷不化，热气在下，久风入中，中者脾胃也。风属甲乙，脾胃属戊己，甲乙能克戊己，肠中有风故鸣。经曰：岁木太过，风气流行，脾土受邪，民病飧泄。诊其两手脉皆浮数，为病在表也，可汗之。直断曰：风随汗出。以火二盆，暗置床之下，不令病人见火，恐增其热，绐之入室，使服涌剂，以[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)③投之，乃闭其户，从户外锁之，汗出如洗，待一时许开户，减火一半，须臾汗止，泄亦止。
+赵明之米谷不消，腹作雷鸣，自五月至六月不愈，诸医以为脾受大寒，故并与圣散子①、豆蔻丸②，虽止一二日，药力尽而复作。诸医不知药之非，反责明之不忌口。戴人至而笑曰：春伤于风，夏必飧泄，飧泄者，米谷不化，而直过下出也。又曰：米谷不化，热气在下，久风入中，中者脾胃也。风属甲乙，脾胃属戊己，甲乙能克戊己，肠中有风故鸣。经曰：岁木太过，风气流行，脾土受邪，民病飧泄。诊其两手脉皆浮数，为病在表也，可汗之。直断曰：风随汗出。以火二盆，暗置床之下，不令病人见火，恐增其热，绐之入室，使服涌剂，以[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)③投之，乃闭其户，从户外锁之，汗出如洗，待一时许开户，减火一半，须臾汗止，泄亦止。
 
 （《儒门事亲》卷六）
 
