--- a/ok/bc/bc02-0.3.1.0.0.md
+++ b/ok/bc/bc02-0.3.1.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】**甘遂为泻水逐饮之峻药。**为大戟科多年生草本植物甘遂的块根。根呈连珠状纺锤形，外表棕褐色，除去外皮为白色。晒干，醋制过用。
 
-本品味苦性寒，有毒。入肺、肾、大肠经。泄降除热，性善走泄下行，为泻水逐饮之峻药。甘遂既可用于痰饮内停，胸腹积水，又可用于水溢肌表之肿胀。外用还有消肿散结之功，可治一切肿毒之征。此外，取其驱逐痰涎之功，可治风痰癫痫。
+本品味苦性寒，有毒。入肺、肾、大肠经。泄降除热，性善走泄下行，为泻水逐饮之峻药。甘遂既可用于痰饮内停，胸腹积水，又可用于水溢肌表之肿胀。外用还有消肿散结之功，可治一切肿毒之证。此外，取其驱逐痰涎之功，可治风痰癫痫。
 
 【临证应用】甘遂泻水之力颇峻，服后可致连续泻下，使潴留之水饮排出体外。治身面浮肿，大腹肿满，皮胸胁积液，可单味应用，或配大黄、芒硝，如大陷胸汤；亦可配大戟、芫花等同用，并常以大枣煎汤送服，以保护脾胃，减少反应，如十枣汤现有用甘遂配大黄、厚朴、桃仁等同用，如甘遂通结肠，治疗现代医学之重证肠梗阻、肠腔积晚较多者，有一定疗效。
 
