--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -12,7 +12,7 @@
 
 痈疽阴阳各异，所生部位不同，药物寒热有别，在具体应用时，又当随证选用，效果才好。各种剂型、药品选用原则如下：
 
-1.阳证：凡疮疡初期，红肿热痛，烦渴，脉数有力者，可敷药性寒凉，功能清热消肿，散瘀化毒的如意金黄散、玉露散；或贴药性清凉，功能消肿、清火解毒的太乙膏、千捶膏等；或同时掺以活血止痛、化痰解毒的红灵丹、阳毒内消散等；或以清热解毒，消肿散结之剂煎汤淋洗,如溻肿升麻汤，浅静脉炎洗剝等。
+1.阳证：凡疮疡初期，红肿热痛，烦渴，脉数有力者，可敷药性寒凉，功能清热消肿，散瘀化毒的如意金黄散、玉露散；或贴药性清凉，功能消肿、清火解毒的太乙膏、千捶膏等；或同时掺以活血止痛、化痰解毒的红灵丹、阳毒内消散等；或以清热解毒，消肿散结之剂煎汤淋洗,如溻肿升麻汤，浅静脉炎洗剂等。
 
 2.阴证，凡疮形平坦漫肿，色暗不痛，不红不热，脉象微软细弱者，可敷药性温热，功能温经活血、散寒化痰的回阳玉龙膏；或贴功能温经和阳，驱风散寒，化痰通络的阳和解凝膏；掺以破坚化痰，散风逐寒的阴毒内消散或桂麝散；或以温经散寒，化痰通络的汤剂淋洗，如升麻溻汤，椒艾洗药等；或用附子饼灸法。
 
