update ok/bc/bc05-0.0.14.0.0.md. “至于《备要》云其补肝虚；坚筋骨”改为“至于《备要》云其补肝虚，坚筋骨”

--- a/ok/bc/bc05-0.0.14.0.0.md
+++ b/ok/bc/bc05-0.0.14.0.0.md
@@ -6,7 +6,7 @@
 
 本品味苦性平。入肝、胃、膀胱经。性善下行，利湿去浊，主治下焦湿热的淋浊带下，尤为治小便混浊，色白如米泔水（乳糜尿）之膏淋的要药。本品又长于祛风湿而通络止痛，用于风湿痹痛，腰痛等证。
 
-至于《备要》云其补肝虚；坚筋骨，益精明目，治风寒湿痹，腰痛久冷等，《本草正义》释曰：《本经》主腰背痛，乃肾有湿热，浊气不去，而腰膂为之疼痛，非肾虚无湿之腰痛，所可浑同施治。强骨节者，宣通百脉，湿浊去而正气自强，非能补益以助其强固，此药理之至易辨者。
+至于《备要》云其补肝虚，坚筋骨，益精明目，治风寒湿痹，腰痛久冷等，《本草正义》释曰：《本经》主腰背痛，乃肾有湿热，浊气不去，而腰膂为之疼痛，非肾虚无湿之腰痛，所可浑同施治。强骨节者，宣通百脉，湿浊去而正气自强，非能补益以助其强固，此药理之至易辨者。
 
 【临证应用】萆薢能利湿而分清浊，常用于膏淋，小便混浊，色白如米泔，及妇女带下等证，多与茯苓、石菖蒲、乌药等药同用，如萆薢分清饮，近代用治乳糜尿，有较好疗效；用于风湿痹证属寒湿者，配附子、桂枝等；若关节不利，腰膝酸痛，则配防己、秦艽、桑枝等。
 
